--- a/_vti_cnf/办学思想.htm
+++ b/_vti_cnf/办学思想.htm
@@ -1,16 +1,16 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|03 Jun 2019 10:42:53 -0000
+vti_timelastmodified:TR|31 Jul 2020 13:32:59 -0000
 vti_author:SR|SKYUSER-GUG1CE7\\Administrator
-vti_modifiedby:SR|SKYUSER-08T9T65\\Administrator
-vti_nexttolasttimemodified:TR|03 Jun 2019 10:42:36 -0000
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
+vti_nexttolasttimemodified:TW|03 Jun 2019 10:42:53 -0000
 vti_timecreated:TR|30 Apr 2019 11:06:04 -0000
 vti_title:SR|办学思想
 vti_extenderversion:SR|6.0.2.6551
 vti_backlinkinfo:VX|目录.htm
 vti_syncwith_localhost\\c\:\\users\\administrator.skyuser-gug1ce7\\desktop\\信息期末考林小钧/c\:/users/administrator.skyuser-gug1ce7/desktop/信息期末考林小钧:TW|29 Apr 2019 13:23:37 -0000
 vti_thicketdir:SW|办学思想.files
-vti_cacheddtm:TX|03 Jun 2019 10:42:54 -0000
-vti_filesize:IR|4151
+vti_cacheddtm:TX|31 Jul 2020 13:32:59 -0000
+vti_filesize:IR|4866
 vti_cachedtitle:SR|办学思想
 vti_cachedbodystyle:SR|<body background="林小钧%20文件/办学宗旨/办学宗旨%20背景.jpg">
 vti_cachedlinkinfo:VX|H|办学思想.files/filelist.xml S|林小钧\\ 文件/办学宗旨/办学宗旨\\ 背景.jpg S|办学思想.files/image001.gif
@@ -19,5 +19,5 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
