--- a/_vti_cnf/急救目录.htm
+++ b/_vti_cnf/急救目录.htm
@@ -1,14 +1,14 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|04 May 2019 07:32:21 -0000
-vti_extenderversion:SR|6.0.2.8161
+vti_timelastmodified:TR|31 Jul 2020 13:33:45 -0000
+vti_extenderversion:SR|6.0.2.6551
 vti_author:SR|SKYUSER-GUG1CE7\\Administrator
-vti_modifiedby:SR|SKYUSER-GUG1CE7\\Administrator
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
 vti_timecreated:TR|04 May 2019 06:42:00 -0000
 vti_title:SR|目录
 vti_backlinkinfo:VX|急救首页.htm
-vti_nexttolasttimemodified:TW|04 May 2019 07:32:18 -0000
-vti_cacheddtm:TX|04 May 2019 07:32:20 -0000
-vti_filesize:IR|608
+vti_nexttolasttimemodified:TW|04 May 2019 07:32:21 -0000
+vti_cacheddtm:TX|31 Jul 2020 13:33:45 -0000
+vti_filesize:IR|637
 vti_cachedtitle:SR|目录
 vti_cachedbodystyle:SR|<body background="隋张问%20文件/急救目录%20背景.png">
 vti_cachedlinkinfo:VX|S|隋张问\\ 文件/急救目录\\ 背景.png H|溺水.htm
@@ -17,6 +17,6 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
 vti_language:SR|zh-cn
