--- a/_vti_cnf/溺水.htm
+++ b/_vti_cnf/溺水.htm
@@ -1,14 +1,14 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|04 May 2019 06:47:26 -0000
-vti_extenderversion:SR|6.0.2.8161
+vti_timelastmodified:TR|31 Jul 2020 13:34:54 -0000
+vti_extenderversion:SR|6.0.2.6551
 vti_author:SR|SKYUSER-GUG1CE7\\Administrator
-vti_modifiedby:SR|SKYUSER-GUG1CE7\\Administrator
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
 vti_timecreated:TR|04 May 2019 06:42:00 -0000
 vti_title:SR|溺水
 vti_backlinkinfo:VX|急救目录.htm
-vti_nexttolasttimemodified:TW|04 May 2019 06:46:19 -0000
-vti_cacheddtm:TX|04 May 2019 06:47:28 -0000
-vti_filesize:IR|22028
+vti_nexttolasttimemodified:TW|04 May 2019 06:47:26 -0000
+vti_cacheddtm:TX|31 Jul 2020 13:34:54 -0000
+vti_filesize:IR|23240
 vti_cachedtitle:SR|溺水
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|S|http://p2.qhimgs4.com/t01bd740c7bd134290b.jpg
@@ -17,5 +17,5 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
