--- a/_vti_cnf/目录.htm
+++ b/_vti_cnf/目录.htm
@@ -1,16 +1,16 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|03 Jun 2019 10:43:04 -0000
+vti_timelastmodified:TR|31 Jul 2020 13:34:47 -0000
 vti_author:SR|SKYUSER-GUG1CE7\\Administrator
-vti_modifiedby:SR|SKYUSER-08T9T65\\Administrator
-vti_nexttolasttimemodified:TR|03 Jun 2019 10:42:53 -0000
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
+vti_nexttolasttimemodified:TW|03 Jun 2019 10:43:04 -0000
 vti_timecreated:TR|30 Apr 2019 11:02:31 -0000
 vti_title:SR|罗源县实验小学
 vti_extenderversion:SR|6.0.2.6551
 vti_backlinkinfo:VX|index.htm 林小钧.htm 目录.htm 隋张问的个人简介.htm
 vti_syncwith_localhost\\c\:\\users\\administrator.skyuser-gug1ce7\\desktop\\信息期末考林小钧/c\:/users/administrator.skyuser-gug1ce7/desktop/信息期末考林小钧:TW|29 Apr 2019 13:18:30 -0000
 vti_syncwith_localhost\\c\:\\users\\administrator\\desktop\\信息期末考/c\:/users/administrator/desktop/信息期末考:TW|03 Jun 2019 09:09:23 -0000
-vti_cacheddtm:TX|03 Jun 2019 10:43:06 -0000
-vti_filesize:IR|21056
+vti_cacheddtm:TX|31 Jul 2020 13:34:47 -0000
+vti_filesize:IR|21620
 vti_cachedtitle:SR|罗源县实验小学
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|S|林小钧\\ 文件/洛天依/洛天依\\ -\\ 汉语拼音字母歌.mp3 K|目录.htm H|历史改革.htm K|目录.htm H|教师成就.htm K|目录.htm H|学制.htm K|目录.htm H|课程设置.htm K|目录.htm H|办学思想.htm K|目录.htm H|办学宗旨.htm K|目录.htm H|校歌.htm
@@ -19,5 +19,5 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
