--- a/_vti_cnf/老师的黑话.htm
+++ b/_vti_cnf/老师的黑话.htm
@@ -1,15 +1,15 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|04 May 2019 07:26:31 -0000
-vti_extenderversion:SR|6.0.2.8161
+vti_timelastmodified:TR|31 Jul 2020 13:35:52 -0000
+vti_extenderversion:SR|6.0.2.6551
 vti_backlinkinfo:VX|index.htm 老师的黑话.htm
 vti_author:SR|SKYUSER-08T9T65\\Administrator
-vti_modifiedby:SR|SKYUSER-GUG1CE7\\Administrator
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
 vti_timecreated:TR|26 Apr 2019 05:21:16 -0000
 vti_title:SR|老师的黑话
 vti_thicketdir:SW|老师的黑话.files
-vti_nexttolasttimemodified:TW|04 May 2019 07:22:05 -0000
-vti_cacheddtm:TX|04 May 2019 07:26:32 -0000
-vti_filesize:IR|3869
+vti_nexttolasttimemodified:TW|31 Jul 2020 13:34:16 -0000
+vti_cacheddtm:TX|31 Jul 2020 13:34:16 -0000
+vti_filesize:IR|4117
 vti_cachedtitle:SR|老师的黑话
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|H|老师的黑话.files/filelist.xml S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_000.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_001.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_002.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_003.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_004.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_005.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_006.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_007.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_008.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_009.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_010.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_011.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_012.jpg S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_013.jpg X|index.htm H|index.htm S|老师的黑话.files/image001.gif K|老师的黑话.htm S|林子皓\\ 文件/老师的黑话\\ 图片/20190424_182901_014.jpg H|林子皓\\ 个人介绍.htm
@@ -18,5 +18,5 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
