--- a/办学思想.htm
+++ b/办学思想.htm
@@ -2,9 +2,9 @@
 
 <head>
 <meta name="renderer" content="ie-comp">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<link rel="File-List" href="°ìÑ§Ë¼Ïë.files/filelist.xml">
-<title>°ìÑ§Ë¼Ïë</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="File-List" href="åŠžå­¦æ€æƒ³.files/filelist.xml">
+<title>åŠžå­¦æ€æƒ³</title>
 <!--[if !mso]>
 <style>
 v\:*         { behavior: url(#default#VML) }
@@ -16,7 +16,7 @@ o\:*         { behavior: url(#default#VML) }
 </xml><![endif]-->
 </head>
 
-<body background="ÁÖÐ¡¾û%20ÎÄ¼þ/°ìÑ§×ÚÖ¼/°ìÑ§×ÚÖ¼%20±³¾°.jpg">
+<body background="æž—å°é’§%20æ–‡ä»¶/åŠžå­¦å®—æ—¨/åŠžå­¦å®—æ—¨%20èƒŒæ™¯.jpg">
 
 <p align="center"><!--[if gte vml 1]><v:shapetype id="_x0000_t136"
  coordsize="21600,21600" o:spt="136" adj="10800" path="m@7,l@8,m@5,21600l@6,21600e">
@@ -49,40 +49,40 @@ o\:*         { behavior: url(#default#VML) }
   method="none" type="gradient"/>
  <v:shadow on="t" type="perspective" color="silver" opacity="52429f" origin="-.5,.5"
   matrix=",46340f,,.5,,-4768371582e-16"/>
- <v:textpath style='font-family:"ËÎÌå";font-size:96pt;font-weight:bold;
-  font-style:italic;v-text-kern:t' trim="t" fitpath="t" string="°ìÑ§Ë¼Ïë"/>
+ <v:textpath style='font-family:"å®‹ä½“";font-size:96pt;font-weight:bold;
+  font-style:italic;v-text-kern:t' trim="t" fitpath="t" string="åŠžå­¦æ€æƒ³"/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=626 height=133
-src="°ìÑ§Ë¼Ïë.files/image001.gif" alt=°ìÑ§Ë¼Ïë v:shapes="_x0000_s1025"><![endif]></p>
+src="åŠžå­¦æ€æƒ³.files/image001.gif" alt=åŠžå­¦æ€æƒ³ v:shapes="_x0000_s1025"><![endif]></p>
 <p align="center"><font size="7"><br>
 <br>
-°ìÑ§ÀíÄî:´«³ÐÎÄÃ÷ ·Å·ÉÀíÏë ÓëÊ±¾ã½ø ºÍÐ³·¢Õ¹<br>
+åŠžå­¦ç†å¿µ:ä¼ æ‰¿æ–‡æ˜Ž æ”¾é£žç†æƒ³ ä¸Žæ—¶ä¿±è¿› å’Œè°å‘å±•<br>
 <br>
-´«³ÐÎÄÃ÷ 
---´«³Ð¾«ÉñÎÄÃ÷¡¢ÖªÊ¶ÎÄÃ÷¡£ÒÔ»ªÏÄÎÄÃ÷¡¢Ãñ×å×Ô×ðÓëÃñ×å¾«ÉñÎªºËÐÄ£¬ÒÔ¾«ÉñÎÄÃ÷½¨ÉèÎªÖ÷ÐýÂÉ£¬¼ÓÇ¿Ð£Ô°ÎÄ»¯½¨Éè£¬Ã÷±æÈÙÈè£¬³çÉÆÇóÕæ£¬ÓÅ»¯ÈËÎÄ½ÌÓý;ÒÔ¿Î³Ì¸Ä¸ïÎª¶¯Á¦£¬ÒÔ¿ÎÌÃ½ÌÑ§ÎªÖ÷ÕóµØ£¬¼¤·¢Ñ§ÉúÈÈ°®¿ÆÑ§£¬ÀÖÑ§ÉÆË¼£¬ÇÚÓÚÌ½¾¿£¬²»¶Ï½øÈ¡µÄÈÈÇé£¬ÅàÓý´´ÐÂÒâÊ¶Óë´´Ôì¾«Éñ 
-¡£ÅàÑøÓÐÀíÏë¡¢ÓÐµÀµÂ¡¢ÓÐÎÄ»¯¡¢ÓÐ¼ÍÂÉµÄÒ»´úÐÂÈË¡£<br>
+ä¼ æ‰¿æ–‡æ˜Ž 
+--ä¼ æ‰¿ç²¾ç¥žæ–‡æ˜Žã€çŸ¥è¯†æ–‡æ˜Žã€‚ä»¥åŽå¤æ–‡æ˜Žã€æ°‘æ—è‡ªå°Šä¸Žæ°‘æ—ç²¾ç¥žä¸ºæ ¸å¿ƒï¼Œä»¥ç²¾ç¥žæ–‡æ˜Žå»ºè®¾ä¸ºä¸»æ—‹å¾‹ï¼ŒåŠ å¼ºæ ¡å›­æ–‡åŒ–å»ºè®¾ï¼Œæ˜Žè¾¨è£è¾±ï¼Œå´‡å–„æ±‚çœŸï¼Œä¼˜åŒ–äººæ–‡æ•™è‚²;ä»¥è¯¾ç¨‹æ”¹é©ä¸ºåŠ¨åŠ›ï¼Œä»¥è¯¾å ‚æ•™å­¦ä¸ºä¸»é˜µåœ°ï¼Œæ¿€å‘å­¦ç”Ÿçƒ­çˆ±ç§‘å­¦ï¼Œä¹å­¦å–„æ€ï¼Œå‹¤äºŽæŽ¢ç©¶ï¼Œä¸æ–­è¿›å–çš„çƒ­æƒ…ï¼ŒåŸ¹è‚²åˆ›æ–°æ„è¯†ä¸Žåˆ›é€ ç²¾ç¥ž 
+ã€‚åŸ¹å…»æœ‰ç†æƒ³ã€æœ‰é“å¾·ã€æœ‰æ–‡åŒ–ã€æœ‰çºªå¾‹çš„ä¸€ä»£æ–°äººã€‚<br>
 <span style="background-color: #FFFF00"><br>
-</span>·Å·ÉÀíÏë 
---ÀíÏëÊÇÁ¦Á¿µÄÈªÔ´¡¢ÖÇ»ÛµÄÒ¡Àº¡£ÓÃÀíÏë×ÌÑøË¼ÏëÓëÈË¸ñ£¬ÓÃÀíÏë¼¤µ´Áé»êÓëÐÄÖÇ£¬ÓÃÀíÏëÔÐÓýÐÂµÄ¾«ÉñÓëÖÇ»Û£¬¸øÊ¦ÉúÒ»¸öÕÅÑï¸öÐÔ·Å·ÉÀíÏëµÄÎèÌ¨£¬²¥ÖÖÏ£Íû£¬ÌôÕ½×ÔÎÒ£¬ÌôÕ½À§ÄÑ£¬ÌôÕ½ÈËÉú!ÈÃ×ÔÎÒ¸üÓÐ³É¾Í£¬ÈÃÈËÉú¸ü¾«²Ê£¬ÈÃÉúÃü¸ü»Ô»Í!<br>
+</span>æ”¾é£žç†æƒ³ 
+--ç†æƒ³æ˜¯åŠ›é‡çš„æ³‰æºã€æ™ºæ…§çš„æ‘‡ç¯®ã€‚ç”¨ç†æƒ³æ»‹å…»æ€æƒ³ä¸Žäººæ ¼ï¼Œç”¨ç†æƒ³æ¿€è¡çµé­‚ä¸Žå¿ƒæ™ºï¼Œç”¨ç†æƒ³å­•è‚²æ–°çš„ç²¾ç¥žä¸Žæ™ºæ…§ï¼Œç»™å¸ˆç”Ÿä¸€ä¸ªå¼ æ‰¬ä¸ªæ€§æ”¾é£žç†æƒ³çš„èˆžå°ï¼Œæ’­ç§å¸Œæœ›ï¼ŒæŒ‘æˆ˜è‡ªæˆ‘ï¼ŒæŒ‘æˆ˜å›°éš¾ï¼ŒæŒ‘æˆ˜äººç”Ÿ!è®©è‡ªæˆ‘æ›´æœ‰æˆå°±ï¼Œè®©äººç”Ÿæ›´ç²¾å½©ï¼Œè®©ç”Ÿå‘½æ›´è¾‰ç…Œ!<br>
 <br>
-ÓëÊ±¾ã½ø 
---½ÌÓýÀíÄî¡¢½ÌÓýÉèÊ©¡¢½ÌÓýÊÖ¶Î¡¢½ÌÓý¼¼ÄÜ¡¢½ÌÓýµÄ·½·¨ÉÏÓëÊ±¾ã½ø;½ÌÊ¦¡¢¼Ò³¤¡¢Ñ§ÉúµÄ¹µÍ¨ÉÏÓëÊ±¾ã½ø¡£¼á³Ö&quot;·¢Õ¹ÊÇÓ²µÀÀí&quot;µÄË¼Â·£¬ÓëÊ±¾ã½ø£¬ÓÅ»¯½ÌÓý½ÌÑ§¹ÜÀí£¬ÍÆÐÐËØÖÊ½ÌÓý£¬Õù´´Ò»Á÷Òµ¼¨¡£<br>
+ä¸Žæ—¶ä¿±è¿› 
+--æ•™è‚²ç†å¿µã€æ•™è‚²è®¾æ–½ã€æ•™è‚²æ‰‹æ®µã€æ•™è‚²æŠ€èƒ½ã€æ•™è‚²çš„æ–¹æ³•ä¸Šä¸Žæ—¶ä¿±è¿›;æ•™å¸ˆã€å®¶é•¿ã€å­¦ç”Ÿçš„æ²Ÿé€šä¸Šä¸Žæ—¶ä¿±è¿›ã€‚åšæŒ&quot;å‘å±•æ˜¯ç¡¬é“ç†&quot;çš„æ€è·¯ï¼Œä¸Žæ—¶ä¿±è¿›ï¼Œä¼˜åŒ–æ•™è‚²æ•™å­¦ç®¡ç†ï¼ŒæŽ¨è¡Œç´ è´¨æ•™è‚²ï¼Œäº‰åˆ›ä¸€æµä¸šç»©ã€‚<br>
 <br>
-ºÍÐ³·¢Õ¹ 
---¹Ø×¢ÈËµÄ¼ÛÖµ£¬½¨Á¢ºÍÐ³µÄ¡¢ÈËÐÔ»¯µÄ»·¾³¡£×ÅÁ¦Éç»á¡¢Ñ§Ð£¡¢¼ÒÍ¥Á¼ÐÔ»¥¶¯£¬¹²Í¬·¢Õ¹;½ÌÊ¦¡¢Ñ§Éú¡¢¼Ò³¤Á¼ÐÔ»¥¶¯£¬¹²Í¬·¢Õ¹;Å¬Á¦ÊµÏÖ:ÈËÈË·¢Õ¹£¬È«Ãæ·¢Õ¹£¬¸öÐÔ·¢Õ¹£¬³ÖÐø·¢Õ¹¡£<br>
+å’Œè°å‘å±• 
+--å…³æ³¨äººçš„ä»·å€¼ï¼Œå»ºç«‹å’Œè°çš„ã€äººæ€§åŒ–çš„çŽ¯å¢ƒã€‚ç€åŠ›ç¤¾ä¼šã€å­¦æ ¡ã€å®¶åº­è‰¯æ€§äº’åŠ¨ï¼Œå…±åŒå‘å±•;æ•™å¸ˆã€å­¦ç”Ÿã€å®¶é•¿è‰¯æ€§äº’åŠ¨ï¼Œå…±åŒå‘å±•;åŠªåŠ›å®žçŽ°:äººäººå‘å±•ï¼Œå…¨é¢å‘å±•ï¼Œä¸ªæ€§å‘å±•ï¼ŒæŒç»­å‘å±•ã€‚<br>
 <br>
-°ìÑ§Ë¼Â·:ÒÔ¿ÆÑÐÎªÏÈµ¼£¬ÒÔÖÊÁ¿Ê÷Æ·ÅÆ£¬¿¿´´ÐÂÇó·¢Õ¹£¬Æ¾ÌØÉ«ÓýÐÂÈË¡£ÊµÊ©&quot;ÁùÈý&quot;¹¤³Ì¡£<br>
+åŠžå­¦æ€è·¯:ä»¥ç§‘ç ”ä¸ºå…ˆå¯¼ï¼Œä»¥è´¨é‡æ ‘å“ç‰Œï¼Œé åˆ›æ–°æ±‚å‘å±•ï¼Œå‡­ç‰¹è‰²è‚²æ–°äººã€‚å®žæ–½&quot;å…­ä¸‰&quot;å·¥ç¨‹ã€‚<br>
 <br>
-×¥&quot;ÈýÈ«&quot;:È«Ãæ¹á³¹µ³ºÍ¹ú¼ÒµÄ½ÌÓý·½Õë,ÃæÏòÈ«ÌåÑ§Éú,È«ÃæÌá¸ß½ÌÓýÖÊÁ¿;<br>
+æŠ“&quot;ä¸‰å…¨&quot;:å…¨é¢è´¯å½»å…šå’Œå›½å®¶çš„æ•™è‚²æ–¹é’ˆ,é¢å‘å…¨ä½“å­¦ç”Ÿ,å…¨é¢æé«˜æ•™è‚²è´¨é‡;<br>
 <br>
-Ê÷&quot;Èý·ç&quot;:&quot;³çÉÆ¡¢ÇóÕæ¡¢ÀÖÑ§¡¢ÉÏ½ø&quot;µÄÐ£·ç£¬&quot;ÍÅ½á¡¢»îÆÃ¡¢ÇÚ·Ü¡¢ÏòÉÏ&quot;µÄÑ§·ç£¬&quot;¾´Òµ¡¢°®Éú¡¢ÑÏ½÷¡¢´´ÐÂ&quot;µÄ½Ì·ç;<br>
+æ ‘&quot;ä¸‰é£Ž&quot;:&quot;å´‡å–„ã€æ±‚çœŸã€ä¹å­¦ã€ä¸Šè¿›&quot;çš„æ ¡é£Žï¼Œ&quot;å›¢ç»“ã€æ´»æ³¼ã€å‹¤å¥‹ã€å‘ä¸Š&quot;çš„å­¦é£Žï¼Œ&quot;æ•¬ä¸šã€çˆ±ç”Ÿã€ä¸¥è°¨ã€åˆ›æ–°&quot;çš„æ•™é£Ž;<br>
 <br>
-´´&quot;ÈýÓÅ&quot;:ÓÅÁ¼µÄ½ÌÑ§ÖÈÐò£¬ÓÅÃÀµÄÑ§Ï°Éú»î»·¾³£¬ÓÅÒìµÄ½ÌÑ§ÖÊÁ¿;<br>
+åˆ›&quot;ä¸‰ä¼˜&quot;:ä¼˜è‰¯çš„æ•™å­¦ç§©åºï¼Œä¼˜ç¾Žçš„å­¦ä¹ ç”Ÿæ´»çŽ¯å¢ƒï¼Œä¼˜å¼‚çš„æ•™å­¦è´¨é‡;<br>
 <br>
-Õù&quot;Èý¸ß&quot;:¸ßÖÊÁ¿µÄÑ§Ð£¹ÜÀí£¬¸ßÖÊÁ¿µÄÊ¦×Ê¶ÓÎé£¬¸ßÖÊÁ¿µÄÑ§ÉúËØÖÊ;<br>
+äº‰&quot;ä¸‰é«˜&quot;:é«˜è´¨é‡çš„å­¦æ ¡ç®¡ç†ï¼Œé«˜è´¨é‡çš„å¸ˆèµ„é˜Ÿä¼ï¼Œé«˜è´¨é‡çš„å­¦ç”Ÿç´ è´¨;<br>
 <br>
-½²&quot;Èý»¯&quot;:½ÌÓýË¼ÏëÏÖ´ú»¯£¬½ÌÓýÉèÊ©ÏÖ´ú»¯£¬½ÌÓý·½·¨¶àÑù»¯;<br>
+è®²&quot;ä¸‰åŒ–&quot;:æ•™è‚²æ€æƒ³çŽ°ä»£åŒ–ï¼Œæ•™è‚²è®¾æ–½çŽ°ä»£åŒ–ï¼Œæ•™è‚²æ–¹æ³•å¤šæ ·åŒ–;<br>
 <br>
-Çó&quot;ÈýÌØ&quot;:½ÌÑ§ÓÐÌØµã£¬Ñ§ÉúÓÐÌØ³¤£¬°ìÑ§ÓÐÌØÉ«¡£</font></p>
+æ±‚&quot;ä¸‰ç‰¹&quot;:æ•™å­¦æœ‰ç‰¹ç‚¹ï¼Œå­¦ç”Ÿæœ‰ç‰¹é•¿ï¼ŒåŠžå­¦æœ‰ç‰¹è‰²ã€‚</font></p>
 
 </body>
 
