--- a/急救首页.htm
+++ b/急救首页.htm
@@ -3,21 +3,22 @@
 <head>
 
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
-<body background="ËåÕÅÎÊ%20ÎÄ¼ş/¼±¾ÈÊ×Ò³%20±³¾°.png">
+<body background="éš‹å¼ é—®%20æ–‡ä»¶/æ€¥æ•‘é¦–é¡µ%20èƒŒæ™¯.png">
 
-<p>¡¡</p>
+<p>ã€€</p>
 
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
 <p align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <b>
-	<i><font size="7" color="#FF0000" face="»ªÎÄ¿¬Ìå">
-	<a style="text-decoration: none" href="¼±¾ÈÄ¿Â¼.htm"><font color="#FF0000">¼±¾ÈÖªÊ¶ÎÒÖªµÀ</font></a></font></i></b></p>
+	<i><font size="7" color="#FF0000" face="åæ–‡æ¥·ä½“">
+	<a style="text-decoration: none" href="æ€¥æ•‘ç›®å½•.htm"><font color="#FF0000">
+æ€¥æ•‘çŸ¥è¯†æˆ‘çŸ¥é“</font></a></font></i></b></p>
 
 </body>
 
