--- a/春游.htm
+++ b/春游.htm
@@ -3,9 +3,9 @@
 <head>
 <meta name="renderer" content="ie-comp">
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<link rel="File-List" href="´ºÓÎ.files/filelist.xml">
-<title>´ºÓÎ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="File-List" href="æ˜¥æ¸¸.files/filelist.xml">
+<title>æ˜¥æ¸¸</title>
 <!--[if !mso]>
 <style>
 v\:*         { behavior: url(#default#VML) }
@@ -13,15 +13,15 @@ o\:*         { behavior: url(#default#VML) }
 .shape       { behavior: url(#default#VML) }
 </style>
 <![endif]-->
-<bgsound src="ÁÖÐ¡¾û%20ÎÄ¼þ/ÂåÌìÒÀ/ÂåÌìÒÀ%20-%20È¨ÓùÌìÏÂ.mp3" loop="-1">
+<bgsound src="æž—å°é’§%20æ–‡ä»¶/æ´›å¤©ä¾/æ´›å¤©ä¾%20-%20æƒå¾¡å¤©ä¸‹.mp3" loop="-1">
 <!--[if gte mso 9]>
 <xml><o:shapedefaults v:ext="edit" spidmax="1027"/>
 </xml><![endif]-->
 </head>
 
-<body background="ÁÖÐ¡¾û%20ÎÄ¼þ/´ºÓÎ/ÅÅ¶Ó.jpg">
+<body background="æž—å°é’§%20æ–‡ä»¶/æ˜¥æ¸¸/æŽ’é˜Ÿ.jpg">
 
-<p align="center">¡¡</p>
+<p align="center">ã€€</p>
 <p align="center"><!--[if gte vml 1]><v:shapetype id="_x0000_t172"
  coordsize="21600,21600" o:spt="172" adj="12000" path="m0@0l21600,m,21600l21600@1e">
  <v:formulas>
@@ -43,67 +43,67 @@ o\:*         { behavior: url(#default#VML) }
  height:93.75pt' adj="6924" fillcolor="#60c" strokecolor="#c9f">
  <v:fill color2="#c0c" focus="100%" type="gradient"/>
  <v:shadow on="t" color="#99f" opacity="52429f" offset="3pt,3pt"/>
- <v:textpath style='font-family:"ËÎÌå";font-size:96pt;font-weight:bold;
-  font-style:italic;v-text-kern:t' trim="t" fitpath="t" string="´ºÓÎ"/>
+ <v:textpath style='font-family:"å®‹ä½“";font-size:96pt;font-weight:bold;
+  font-style:italic;v-text-kern:t' trim="t" fitpath="t" string="æ˜¥æ¸¸"/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=185 height=124
-src="´ºÓÎ.files/image001.gif" alt=´ºÓÎ v:shapes="_x0000_s1025"><![endif]></p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center"><font size="7" color="#FF0000">´ó¼ÒÓä¿ìµÄ´ºÓÎ</font></p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
+src="æ˜¥æ¸¸.files/image001.gif" alt=æ˜¥æ¸¸ v:shapes="_x0000_s1025"><![endif]></p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center"><font size="7" color="#FF0000">å¤§å®¶æ„‰å¿«çš„æ˜¥æ¸¸</font></p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
 <p align="center">
-¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
+ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
 <p align="center">
 </p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
 <p align="center">
 </p>
 
