--- a/林小钧.htm
+++ b/林小钧.htm
@@ -3,9 +3,9 @@
 <head>
 <meta name="renderer" content="ie-comp">
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<link rel="File-List" href="ÁÖĞ¡¾û.files/filelist.xml">
-<title>ÎÒÊÇÂŞÔ´ÏØÊµÑéĞ¡Ñ§µÄÑ§Éú</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="File-List" href="æ—å°é’§.files/filelist.xml">
+<title>æˆ‘æ˜¯ç½—æºå¿å®éªŒå°å­¦çš„å­¦ç”Ÿ</title>
 <!--[if !mso]>
 <style>
 v\:*         { behavior: url(#default#VML) }
@@ -13,17 +13,17 @@ o\:*         { behavior: url(#default#VML) }
 .shape       { behavior: url(#default#VML) }
 </style>
 <![endif]-->
-<bgsound src="ÁÖĞ¡¾û%20ÎÄ¼ş/ÂåÌìÒÀ/ÂåÌìÒÀ%20-%20²ÔÖ®ÀñÔŞ.wav" loop="-1">
+<bgsound src="æ—å°é’§%20æ–‡ä»¶/æ´›å¤©ä¾/æ´›å¤©ä¾%20-%20è‹ä¹‹ç¤¼èµ.wav" loop="-1">
 <!--[if gte mso 9]>
 <xml><o:shapedefaults v:ext="edit" spidmax="1027"/>
 </xml><![endif]-->
 </head>
 
-<body background="Ö÷Ò³±³¾°Í¼/1.gif" style="background-attachment: fixed">
+<body background="ä¸»é¡µèƒŒæ™¯å›¾/1.gif" style="background-attachment: fixed">
 
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
 <p align="center">
 <!--[if gte vml 1]><v:shapetype id="_x0000_t136"
  coordsize="21600,21600" o:spt="136" adj="10800" path="m@7,l@8,m@5,21600l@6,21600e">
@@ -50,48 +50,48 @@ o\:*         { behavior: url(#default#VML) }
   <v:h position="#0,bottomRight" xrange="6629,14971"/>
  </v:handles>
  <o:lock v:ext="edit" text="t" shapetype="t"/>
-</v:shapetype><v:shape id="_x0000_s1025" type="#_x0000_t136" alt="ÁÖĞ¡¾ûµÄ¸öÈË¼ò½é&#13;&#10;"
+</v:shapetype><v:shape id="_x0000_s1025" type="#_x0000_t136" alt="æ—å°é’§çš„ä¸ªäººç®€ä»‹&#13;&#10;"
  style='width:391.5pt;height:48.75pt' fillcolor="#333" strokecolor="#eaeaea"
  strokeweight=".35189mm">
  <v:fill color2="blue"/>
  <v:shadow on="t" type="perspective" color="silver" opacity="52429f" origin="-.5,.5"
   matrix=",46340f,,.5,,-4768371582e-16"/>
- <v:textpath style='font-family:"Ò¶¸ùÓÑÃ«±ÊĞĞÊé2.0°æ";font-size:32pt;v-text-kern:t'
-  trim="t" fitpath="t" string="ÁÖĞ¡¾ûµÄ¸öÈËÖ÷Ò³&#13;&#10;"/>
-</v:shape><![endif]--><![if !vml]><img border=0 width=549 height=70
-src="ÁÖĞ¡¾û.files/image001.gif" alt="ÁÖĞ¡¾ûµÄ¸öÈË¼ò½é&#13;&#10;" v:shapes="_x0000_s1025"><![endif]></p>
+ <v:textpath style='font-family:"å¶æ ¹å‹æ¯›ç¬”è¡Œä¹¦2.0ç‰ˆ";font-size:32pt;v-text-kern:t'
+  trim="t" fitpath="t" string="æ—å°é’§çš„ä¸ªäººä¸»é¡µ&#13;&#10;"/>
+</v:shape><![endif]--><![if !vml]><img border=0 width=551 height=70
+src="æ—å°é’§.files/image001.gif" alt="æ—å°é’§çš„ä¸ªäººç®€ä»‹&#13;&#10;" v:shapes="_x0000_s1025"><![endif]></p>
 <p align="center">
-¡¡</p>
+ã€€</p>
 <p align="center">
-<b><font size="5" face="·½ÕıÀ¼Í¤³¬Ï¸ºÚ¼òÌå" color="#6600FF">
-<marquee scrollamount="50" height="46" scrolldelay="500" width="1278" behavior="alternate" loop="1">»¶Ó­À´µ½ÎÒµÄÖ÷Ò³£¡£¡£¡</marquee></font></b></p>
-<p align="left"><font color="#000080" size="4">&nbsp;&nbsp;&nbsp; ÎÒÊÇ</font><font size="4" color="#0000FF">¸£½¨Ê¡</font><font size="4" color="#FF0000"><a href="Ä¿Â¼.htm">ÂŞÔ´ÏØÊµÑéĞ¡Ñ§</a></font><font size="4" color="#0000FF">ÎåÄê¼¶Îå°à</font><font size="4">µÄÑ§Éú
-£¬ÊÇÎÒÃÇ<a href="index.htm" style="text-decoration: none">ĞÅÏ¢×é</a>µÄ</font><font size="4" color="#0000FF">×é³¤</font><font size="4">¡£</font></p>
-<p align="left">¡¡</p>
+<b><font size="5" face="æ–¹æ­£å…°äº­è¶…ç»†é»‘ç®€ä½“" color="#6600FF">
+<marquee scrollamount="50" height="46" scrolldelay="500" width="1278" behavior="alternate" loop="1">æ¬¢è¿æ¥åˆ°æˆ‘çš„ä¸»é¡µï¼ï¼ï¼</marquee></font></b></p>
+<p align="left"><font color="#000080" size="4">&nbsp;&nbsp;&nbsp; æˆ‘æ˜¯</font><font size="4" color="#0000FF">ç¦å»ºçœ</font><font size="4" color="#FF0000"><a href="ç›®å½•.htm">ç½—æºå¿å®éªŒå°å­¦</a></font><font size="4" color="#0000FF">äº”å¹´çº§äº”ç­</font><font size="4">çš„å­¦ç”Ÿ 
+ï¼Œæ˜¯æˆ‘ä»¬<a href="index.htm" style="text-decoration: none">ä¿¡æ¯ç»„</a>çš„</font><font size="4" color="#0000FF">ç»„é•¿</font><font size="4">ã€‚</font></p>
+<p align="left">ã€€</p>
 <p align="left"><b><font size="4" color="#FFFF00">&nbsp;&nbsp;&nbsp; </font>
-<font size="5" color="#FFFF00">ÉúĞ¤£º</font><font size="4" color="#008080">½ğÖí±¦±¦</font></b></p>
+<font size="5" color="#FFFF00">ç”Ÿè‚–ï¼š</font><font size="4" color="#008080">é‡‘çŒªå®å®</font></b></p>
 <p align="left"><b><font size="4" color="#FFFF00">&nbsp;&nbsp;&nbsp; </font>
-<font size="5" color="#FFFF00">ĞÇ×ù£º</font><font size="4" color="#FFFF00">´¦Å®×ù </font></b>
-<span style="font-family: ¿¬Ìå; color: #515151; letter-spacing: normal; background-color: #FFFFFF">
-<font size="4">´¦Å®×ùÄĞ</font></span><span style="color: rgb(81, 81, 81); font-family: ¿¬Ìå; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255)"><font size="4">Éú¡ªµ÷Æ¤¡¢ÈÈÇé¡¢º¦Ğß£¬</font><font size="5">µ«ÊÇ£¡µ«ÊÇ£¡</font></span></p>
+<font size="5" color="#FFFF00">æ˜Ÿåº§ï¼š</font><font size="4" color="#FFFF00">å¤„å¥³åº§ </font></b>
+<span style="font-family: æ¥·ä½“; color: #515151; letter-spacing: normal; background-color: #FFFFFF">
+<font size="4">å¤„å¥³åº§ç”·</font></span><span style="color: rgb(81, 81, 81); font-family: æ¥·ä½“; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255)"><font size="4">ç”Ÿâ€”è°ƒçš®ã€çƒ­æƒ…ã€å®³ç¾ï¼Œ</font><font size="5">ä½†æ˜¯ï¼ä½†æ˜¯ï¼</font></span></p>
 <p align="left"><font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </font>
-<span style="color: rgb(81, 81, 81); font-family: ¿¬Ìå; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255)">
-<font size="4">ÎÒ²»ÊÇ¸ö×·ÇóÍêÃÀµÄÈË£¬¾­³£¶ªÈıÂäËÄ£¬ÕâĞÇ×ù¿Ï¶¨ÊÇ</font><font size="5">¼Ù</font><font size="4">µÄ£¡</font></span></p>
+<span style="color: rgb(81, 81, 81); font-family: æ¥·ä½“; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255)">
+<font size="4">æˆ‘ä¸æ˜¯ä¸ªè¿½æ±‚å®Œç¾çš„äººï¼Œç»å¸¸ä¸¢ä¸‰è½å››ï¼Œè¿™æ˜Ÿåº§è‚¯å®šæ˜¯</font><font size="5">å‡</font><font size="4">çš„ï¼</font></span></p>
 <p align="left"><b><font size="4" color="#FFFF00">&nbsp;&nbsp; </font>
-<font size="5" color="#FFFF00">&nbsp;Éí¸ß£º</font><font size="4" color="#0000FF">150CM,</font><font size="5" color="#FFFF00">ÌåÖØ£º</font><font size="4" color="#0000FF">35KG¡£</font></b><span style="letter-spacing: normal; font-family: ¿¬Ìå; background-color: #FFFFFF"><font size="4" color="#515151">ÎÒÊÇ¸ö</font></span><span style="letter-spacing: normal; background-color: #FFFFFF"><font size="5" color="#515151" face="Ò¶¸ùÓÑÃ«±ÊĞĞÊé2.0°æ">ÏÖÊµºÜ¹Ç¸Ğ</font><font face="¿¬Ìå" size="4" color="#515151">µÄĞ¡ÄĞÉú¡£</font></span></p>
+<font size="5" color="#FFFF00">&nbsp;èº«é«˜ï¼š</font><font size="4" color="#0000FF">150CM,</font><font size="5" color="#FFFF00">ä½“é‡ï¼š</font><font size="4" color="#0000FF">35KGã€‚</font></b><span style="letter-spacing: normal; font-family: æ¥·ä½“; background-color: #FFFFFF"><font size="4" color="#515151">æˆ‘æ˜¯ä¸ª</font></span><span style="letter-spacing: normal; background-color: #FFFFFF"><font size="5" color="#515151" face="å¶æ ¹å‹æ¯›ç¬”è¡Œä¹¦2.0ç‰ˆ">ç°å®å¾ˆéª¨æ„Ÿ</font><font face="æ¥·ä½“" size="4" color="#515151">çš„å°ç”·ç”Ÿã€‚</font></span></p>
 <p align="left"><font size="4" color="#FFFF00"><b>&nbsp;&nbsp; </b></font><b>
-<font size="5" color="#FFFF00">&nbsp;°®ºÃ</font><font size="4"><font color="#FFFF00">£º</font><font color="#3399FF">ÌıÒôÀÖ</font>¡¢<font color="#FF0000">ÍæÓÎÏ·</font>¡¢<font color="#FFFF00">½»ÅóÓÑ</font><font color="#008080">¡¢</font><a target="_blank" href="´ºÓÎ.htm"><font color="#008080">´ºÓÎ</font></a><i>£¬</i></font></b><font size="4">&nbsp;&nbsp;&nbsp;&nbsp;
+<font size="5" color="#FFFF00">&nbsp;çˆ±å¥½</font><font size="4"><font color="#FFFF00">ï¼š</font><font color="#3399FF">å¬éŸ³ä¹</font>ã€<font color="#FF0000">ç©æ¸¸æˆ</font>ã€<font color="#FFFF00">äº¤æœ‹å‹</font><font color="#008080">ã€</font><a target="_blank" href="æ˜¥æ¸¸.htm"><font color="#008080">æ˜¥æ¸¸</font></a><i>ï¼Œ</i></font></b><font size="4">&nbsp;&nbsp;&nbsp;&nbsp;
 </font></p>
 <p align="left"><font color="#000080" size="4">&nbsp;&nbsp;&nbsp; </font></p>
 <p align="left"><font size="4" color="#3399FF">&nbsp;&nbsp;&nbsp; </font>
-<font size="4" color="#FFFF00">&nbsp;ÎÒµÄ¶ÓÔ±ÓĞ£º</font><a href="ÁÖ×Óğ©%20¸öÈË½éÉÜ.htm"><font size="4">°®´µÅ£
-µÄ</font><b><font face="ĞÂËÎÌå" size="5" color="#008080">ÁÖ×Óğ©</font></b></a>£¬<font size="4">¼¼ÊõºÍÎÒ²î²»¶àÁË¡£&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </font>
+<font size="4" color="#FFFF00">&nbsp;æˆ‘çš„é˜Ÿå‘˜æœ‰ï¼š</font><a href="æ—å­çš“%20ä¸ªäººä»‹ç».htm"><font size="4">çˆ±å¹ç‰› 
+çš„</font><b><font face="æ–°å®‹ä½“" size="5" color="#008080">æ—å­çš“</font></b></a>ï¼Œ<font size="4">æŠ€æœ¯å’Œæˆ‘å·®ä¸å¤šäº†ã€‚&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </font>
 </p>
-<p align="left"><font size="4" color="#6600FF">&nbsp;&nbsp;&nbsp;&nbsp; ´óÄÚ×Ü¹Ü</font><font size="4">-</font><a target="_blank" href="Íõ¿ÉÜ°.htm"><font color="#FF0000" size="5" face="Î¢ÈíÑÅºÚ">Íõ¿ÉÜ°</font></a><font size="4">&nbsp;¡¢»¹ÓĞ
-£¬</font><font color="#3399FF" size="4">¸ßÊÖ</font><font size="4" color="#FF0000">-</font><font size="5" color="#808080" face="Ò¶¸ùÓÑÃ«±ÊĞĞÊé2.0°æ"><a href="ËåÕÅÎÊµÄ¸öÈË¼ò½é.htm">ËåÕÅÎÊ</a>
-¡£</font></p>
-<p align="left">¡¡</p>
+<p align="left"><font size="4" color="#6600FF">&nbsp;&nbsp;&nbsp;&nbsp; å¤§å†…æ€»ç®¡</font><font size="4">-</font><a target="_blank" href="ç‹å¯é¦¨.htm"><font color="#FF0000" size="5" face="å¾®è½¯é›…é»‘">ç‹å¯é¦¨</font></a><font size="4">&nbsp;ã€è¿˜æœ‰ 
+ï¼Œ</font><font color="#3399FF" size="4">é«˜æ‰‹</font><font size="4" color="#FF0000">-</font><font size="5" color="#808080" face="å¶æ ¹å‹æ¯›ç¬”è¡Œä¹¦2.0ç‰ˆ"><a href="éš‹å¼ é—®çš„ä¸ªäººç®€ä»‹.htm">éš‹å¼ é—®</a>
+ã€‚</font></p>
+<p align="left">ã€€</p>
 
 </body>
 
