--- a/_vti_cnf/index.htm
+++ b/_vti_cnf/index.htm
@@ -1,15 +1,15 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|SKYUSER-08T9T65\\Administrator
-vti_modifiedby:SR|SKYUSER-GUG1CE7\\Administrator
-vti_timelastmodified:TR|07 Jun 2019 03:39:49 -0000
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
+vti_timelastmodified:TR|31 Jul 2020 13:32:26 -0000
 vti_timecreated:TR|26 Apr 2019 05:05:03 -0000
-vti_extenderversion:SR|6.0.2.8161
+vti_extenderversion:SR|6.0.2.6551
 vti_backlinkinfo:VX|index.htm 网站集锦.htm 林子皓\\ 个人介绍.htm 老师的黑话.htm 林小钧.htm 隋张问的个人简介.htm
 vti_thicketdir:SW|index.files
-vti_nexttolasttimemodified:TW|06 Jun 2019 01:03:49 -0000
+vti_nexttolasttimemodified:TW|07 Jun 2019 03:39:49 -0000
 vti_title:SR|团队主页
-vti_cacheddtm:TX|07 Jun 2019 03:39:50 -0000
-vti_filesize:IR|8198
+vti_cacheddtm:TX|31 Jul 2020 13:32:26 -0000
+vti_filesize:IR|8565
 vti_cachedtitle:SR|团队主页
 vti_cachedbodystyle:SR|<body background="主页背景图/蝴蝶兰花.png">
 vti_cachedlinkinfo:VX|H|index.files/filelist.xml S|林小钧\\ 文件/洛天依/洛天依\\ -\\ 小鸡哔哔.mp3 S|主页背景图/蝴蝶兰花.png S|index.files/image001.gif H|林子皓\\ 个人介绍.htm H|林小钧.htm H|隋张问的个人简介.htm H|王可馨.htm X|网站集锦.htm X|index.files/image002.jpg H|网站集锦.htm S|index.files/image003.gif K|index.htm H|林子皓\\ 个人介绍.htm X|老师的黑话.htm X|index.files/image002.jpg H|老师的黑话.htm S|index.files/image004.gif K|index.htm H|林子皓\\ 个人介绍.htm X|目录.htm X|index.files/image002.jpg H|目录.htm S|index.files/image005.gif K|index.htm H|林小钧.htm H|王可馨.htm X|急救首页.htm X|index.files/image002.jpg H|急救首页.htm S|index.files/image006.gif K|index.htm H|隋张问的个人简介.htm
@@ -18,6 +18,6 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312 description 组长：林小钧\\ \\ 组员：林子皓、隋张问、王可欣
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8 description 组长：林小钧\\ \\ 组员：林子皓、隋张问、王可欣
+vti_charset:SR|utf-8
 vti_language:SR|zh-cn
