--- a/_vti_cnf/历史改革.htm
+++ b/_vti_cnf/历史改革.htm
@@ -1,16 +1,16 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|30 Apr 2019 11:47:12 -0000
+vti_timelastmodified:TR|31 Jul 2020 13:34:25 -0000
 vti_author:SR|SKYUSER-GUG1CE7\\Administrator
-vti_modifiedby:SR|SKYUSER-GUG1CE7\\Administrator
-vti_nexttolasttimemodified:TW|30 Apr 2019 11:45:56 -0000
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
+vti_nexttolasttimemodified:TW|30 Apr 2019 11:47:12 -0000
 vti_timecreated:TR|30 Apr 2019 11:00:48 -0000
 vti_title:SR|历史沿革 县实验小学前身为清光绪三十年
-vti_extenderversion:SR|6.0.2.8161
+vti_extenderversion:SR|6.0.2.6551
 vti_backlinkinfo:VX|目录.htm
 vti_syncwith_localhost\\c\:\\users\\administrator.skyuser-gug1ce7\\desktop\\信息期末考林小钧/c\:/users/administrator.skyuser-gug1ce7/desktop/信息期末考林小钧:TW|29 Apr 2019 13:18:30 -0000
 vti_thicketdir:SW|历史改革.files
-vti_cacheddtm:TX|30 Apr 2019 11:00:50 -0000
-vti_filesize:IR|4946
+vti_cacheddtm:TX|31 Jul 2020 13:34:25 -0000
+vti_filesize:IR|5601
 vti_cachedtitle:SR|历史沿革 县实验小学前身为清光绪三十年
 vti_cachedbodystyle:SR|<body background="林小钧%20文件/历史改革/历史改革%20背景.jpg">
 vti_cachedlinkinfo:VX|H|历史改革.files/filelist.xml S|林小钧\\ 文件/洛天依/洛天依\\ -\\ 清明上河图.mp3 S|林小钧\\ 文件/历史改革/历史改革\\ 背景.jpg S|历史改革.files/image001.gif
@@ -19,5 +19,5 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
