--- a/_vti_cnf/学制.htm
+++ b/_vti_cnf/学制.htm
@@ -1,15 +1,16 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|30 Apr 2019 11:46:51 -0000
+vti_timelastmodified:TR|31 Jul 2020 13:35:27 -0000
 vti_author:SR|SKYUSER-GUG1CE7\\Administrator
-vti_modifiedby:SR|SKYUSER-GUG1CE7\\Administrator
-vti_nexttolasttimemodified:TW|29 Apr 2019 13:18:31 -0000
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
+vti_nexttolasttimemodified:TW|30 Apr 2019 11:46:51 -0000
 vti_timecreated:TR|30 Apr 2019 10:52:59 -0000
 vti_title:SR|学制 民国元年
-vti_extenderversion:SR|6.0.2.8161
+vti_extenderversion:SR|6.0.2.6551
 vti_backlinkinfo:VX|目录.htm
 vti_syncwith_localhost\\c\:\\users\\administrator.skyuser-gug1ce7\\desktop\\信息期末考林小钧/c\:/users/administrator.skyuser-gug1ce7/desktop/信息期末考林小钧:TW|29 Apr 2019 13:18:31 -0000
-vti_cacheddtm:TX|30 Apr 2019 10:53:00 -0000
-vti_filesize:IR|2985
+vti_thicketdir:SW|学制.files
+vti_cacheddtm:TX|31 Jul 2020 13:35:27 -0000
+vti_filesize:IR|3293
 vti_cachedtitle:SR|学制 民国元年
 vti_cachedbodystyle:SR|<body background="林小钧%20文件/学制、校歌/学制、校歌%20背景.jpg">
 vti_cachedlinkinfo:VX|H|学制.files/filelist.xml S|林小钧\\ 文件/洛天依/洛天依\\ -\\ 绝世唐门.mp3 S|林小钧\\ 文件/学制、校歌/学制、校歌\\ 背景.jpg S|学制.files/image001.gif
@@ -18,7 +19,6 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
 vti_language:SR|zh-cn
-vti_thicketdir:SW|学制.files
