--- a/_vti_cnf/林子皓 个人介绍.htm
+++ b/_vti_cnf/林子皓 个人介绍.htm
@@ -1,15 +1,15 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|03 Jun 2019 11:16:58 -0000
+vti_timelastmodified:TR|31 Jul 2020 13:35:54 -0000
 vti_extenderversion:SR|6.0.2.6551
 vti_backlinkinfo:VX|index.htm 网站集锦.htm 老师的黑话.htm 林子皓\\ 个人介绍.htm 林小钧.htm 隋张问的个人简介.htm
 vti_author:SR|SKYUSER-08T9T65\\Administrator
-vti_modifiedby:SR|SKYUSER-08T9T65\\Administrator
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
 vti_timecreated:TR|26 Apr 2019 05:12:34 -0000
 vti_thicketdir:SW|林子皓 个人介绍.files
-vti_nexttolasttimemodified:TW|11 May 2019 07:04:44 -0000
+vti_nexttolasttimemodified:TW|31 Jul 2020 13:35:46 -0000
 vti_title:SR|林子皓 个人介绍
-vti_cacheddtm:TX|03 Jun 2019 11:17:00 -0000
-vti_filesize:IR|11754
+vti_cacheddtm:TX|31 Jul 2020 13:34:40 -0000
+vti_filesize:IR|12621
 vti_cachedtitle:SR|林子皓 个人介绍
 vti_cachedbodystyle:SR|<body background="林子皓%20文件/林子皓%20个人介绍/林子皓%20%20背景.jpg">
 vti_cachedlinkinfo:VX|S|林子皓\\ 个人介绍.htm S|林子皓\\ 个人介绍.htm S|林子皓\\ 个人介绍.htm S|林子皓\\ 文件/林子皓\\ 个人介绍/林子皓\\ 背景音乐吃货.mp3 H|林子皓\\ 个人介绍.files/filelist.xml S|林子皓\\ 文件/林子皓\\ 个人介绍/林子皓\\ \\ 背景.jpg S|林子皓\\ 个人介绍.files/image001.gif H|http://xiaohaozi.sxl.cn H|http://t.cn/Eo68MQy H|http://xiaohaozi.lkdsw.com S|林子皓\\ 文件/林子皓\\ 个人介绍/用碗接泪.jpg H|http://xhz.12ek.cn S|林子皓\\ 文件/林子皓\\ 个人介绍/地球（正式版）.gif S|林子皓\\ 文件/林子皓\\ 个人介绍/装逼.jpg S|林子皓\\ 文件/林子皓\\ 个人介绍/羡慕.jpg S|林子皓\\ 文件/林子皓\\ 个人介绍/魔方图标.jpg H|代码集/从新窗口打开超链接代码.txt H|代码集 H|代码集/内核指定为兼容代码.txt S|林子皓\\ 个人介绍.files/image002.gif S|林子皓\\ 个人介绍.files/image003.gif S|林子皓\\ 个人介绍.files/image004.gif S|林子皓\\ 文件/林子皓\\ 个人介绍/凉了.jpg S|林子皓\\ 文件/林子皓\\ 个人介绍/哭脸.gif H|林子皓\\ 文件/林子皓\\ 个人介绍/永久冻结.PNG H|tencent://message/ S|林子皓\\ 文件/林子皓\\ 个人介绍/婴儿（新的）.gif H|http://xiaohaozi.sxl.cn X|index.htm H|index.htm S|林子皓\\ 个人介绍.files/image005.gif K|林子皓\\ 个人介绍.htm
@@ -18,6 +18,6 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
 vti_language:SR|zh-cn
