--- a/_vti_cnf/校歌.htm
+++ b/_vti_cnf/校歌.htm
@@ -1,16 +1,16 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|03 Jun 2019 10:40:03 -0000
+vti_timelastmodified:TR|31 Jul 2020 13:35:22 -0000
 vti_author:SR|SKYUSER-GUG1CE7\\Administrator
-vti_modifiedby:SR|SKYUSER-08T9T65\\Administrator
-vti_nexttolasttimemodified:TW|30 Apr 2019 11:48:54 -0000
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
+vti_nexttolasttimemodified:TW|03 Jun 2019 10:40:03 -0000
 vti_timecreated:TR|30 Apr 2019 11:08:29 -0000
 vti_title:SR|笔架山麓
 vti_extenderversion:SR|6.0.2.6551
 vti_backlinkinfo:VX|目录.htm
 vti_syncwith_localhost\\c\:\\users\\administrator.skyuser-gug1ce7\\desktop\\信息期末考林小钧/c\:/users/administrator.skyuser-gug1ce7/desktop/信息期末考林小钧:TW|29 Apr 2019 13:12:21 -0000
 vti_thicketdir:SW|校歌.files
-vti_cacheddtm:TX|03 Jun 2019 10:40:04 -0000
-vti_filesize:IR|2535
+vti_cacheddtm:TX|31 Jul 2020 13:35:22 -0000
+vti_filesize:IR|2667
 vti_cachedtitle:SR|笔架山麓
 vti_cachedbodystyle:SR|<body background="林小钧%20文件/学制、校歌/学制、校歌%20背景.jpg">
 vti_cachedlinkinfo:VX|H|校歌.files/filelist.xml S|林小钧\\ 文件/学制、校歌/学制、校歌\\ 背景.jpg S|校歌.files/image001.gif
@@ -19,5 +19,5 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
