--- a/_vti_cnf/王可馨.htm
+++ b/_vti_cnf/王可馨.htm
@@ -1,8 +1,8 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|03 Jun 2019 09:48:25 -0000
+vti_timelastmodified:TR|31 Jul 2020 13:35:11 -0000
 vti_author:SR|SKYUSER-GUG1CE7\\Administrator
-vti_modifiedby:SR|SKYUSER-08T9T65\\Administrator
-vti_nexttolasttimemodified:TR|03 Jun 2019 09:47:16 -0000
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
+vti_nexttolasttimemodified:TW|03 Jun 2019 09:48:25 -0000
 vti_timecreated:TR|30 Apr 2019 10:56:08 -0000
 vti_title:SR|王可馨个人简介
 vti_extenderversion:SR|6.0.2.6551
@@ -10,8 +10,8 @@ vti_backlinkinfo:VX|index.htm 林小钧.htm 隋张问的个人简介.htm
 vti_syncwith_localhost\\c\:\\users\\administrator.skyuser-gug1ce7\\desktop\\信息期末考林小钧/c\:/users/administrator.skyuser-gug1ce7/desktop/信息期末考林小钧:TW|29 Apr 2019 12:44:58 -0000
 vti_thicketdir:SW|王可馨.files
 vti_syncwith_localhost\\c\:\\users\\administrator\\desktop\\信息期末考/c\:/users/administrator/desktop/信息期末考:TW|03 Jun 2019 09:02:31 -0000
-vti_cacheddtm:TX|03 Jun 2019 09:48:26 -0000
-vti_filesize:IR|2972
+vti_cacheddtm:TX|31 Jul 2020 13:35:11 -0000
+vti_filesize:IR|3142
 vti_cachedtitle:SR|王可馨个人简介
 vti_cachedbodystyle:SR|<body background="王可欣%20文件/王可欣背景图.jpg">
 vti_cachedlinkinfo:VX|H|王可馨.files/filelist.xml S|王可欣\\ 文件/王可欣背景图.jpg S|王可馨.files/image001.gif
@@ -20,6 +20,6 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
 vti_language:SR|zh-cn
