--- a/_vti_cnf/网站集锦.htm
+++ b/_vti_cnf/网站集锦.htm
@@ -1,15 +1,15 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|03 Jun 2019 10:41:17 -0000
+vti_timelastmodified:TR|31 Jul 2020 13:35:51 -0000
 vti_extenderversion:SR|6.0.2.6551
 vti_backlinkinfo:VX|index.htm 网站集锦.htm
 vti_author:SR|SKYUSER-08T9T65\\Administrator
-vti_modifiedby:SR|SKYUSER-08T9T65\\Administrator
+vti_modifiedby:SR|CN-20200327IZIP\\Administrator
 vti_timecreated:TR|26 Apr 2019 05:12:34 -0000
 vti_title:SR|网站集锦
 vti_thicketdir:SW|网站集锦.files
-vti_nexttolasttimemodified:TW|04 May 2019 07:18:45 -0000
-vti_cacheddtm:TX|03 Jun 2019 10:41:18 -0000
-vti_filesize:IR|5410
+vti_nexttolasttimemodified:TW|31 Jul 2020 13:35:16 -0000
+vti_cacheddtm:TX|31 Jul 2020 13:35:16 -0000
+vti_filesize:IR|5617
 vti_cachedtitle:SR|网站集锦
 vti_cachedbodystyle:SR|<body background="林子皓%20文件/网站集锦/网站集锦%20背景.jpg">
 vti_cachedlinkinfo:VX|H|网站集锦.files/filelist.xml S|林子皓\\ 文件/网站集锦/网站集锦\\ 背景.jpg S|网站集锦.files/image001.gif H|http://meiriyiwen.com H|http://www.qiushibaike.com/ H|http://www.xiami.com/ H|http://jandan.net/ X|index.htm H|index.htm S|网站集锦.files/image002.gif K|网站集锦.htm H|林子皓\\ 个人介绍.htm
@@ -18,6 +18,6 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312 keywords 有趣网站 description 为大家推荐的各种有趣网站！
-vti_charset:SR|gb2312
+vti_metatags:VR|renderer ie-comp HTTP-EQUIV=Content-Language zh-cn HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8 keywords 有趣网站 description 为大家推荐的各种有趣网站！
+vti_charset:SR|utf-8
 vti_language:SR|zh-cn
