--- a/林子皓 个人介绍.htm
+++ b/林子皓 个人介绍.htm
@@ -7,17 +7,17 @@ o\:*         { behavior: url(#default#VML) }
 .shape       { behavior: url(#default#VML) }
 </style>
 <meta name="renderer" content="ie-comp">
-<bgsound src="ÁÖ×Óð©%20ÎÄ¼þ/ÁÖ×Óð©%20¸öÈË½éÉÜ/ÁÖ×Óð©%20±³¾°ÒôÀÖ³Ô»õ.mp3" loop="-1" volume="0.4">
+<bgsound src="æž—å­çš“%20æ–‡ä»¶/æž—å­çš“%20ä¸ªäººä»‹ç»/æž—å­çš“%20èƒŒæ™¯éŸ³ä¹åƒè´§.mp3" loop="-1" volume="0.4">
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<link rel="File-List" href="ÁÖ×Óð©%20¸öÈË½éÉÜ.files/filelist.xml">
-<title>ÁÖ×Óð© ¸öÈË½éÉÜ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="File-List" href="æž—å­çš“%20ä¸ªäººä»‹ç».files/filelist.xml">
+<title>æž—å­çš“ ä¸ªäººä»‹ç»</title>
 <!--[if gte mso 9]>
 <xml><o:shapedefaults v:ext="edit" spidmax="1027"/>
 </xml><![endif]-->
 </head>
 
-<body background="ÁÖ×Óð©%20ÎÄ¼þ/ÁÖ×Óð©%20¸öÈË½éÉÜ/ÁÖ×Óð©%20%20±³¾°.jpg">
+<body background="æž—å­çš“%20æ–‡ä»¶/æž—å­çš“%20ä¸ªäººä»‹ç»/æž—å­çš“%20%20èƒŒæ™¯.jpg">
 
 <p align="center" style="position: relative !important; ">
 <!--[if gte vml 1]><v:shapetype id="_x0000_t136"
@@ -45,91 +45,92 @@ o\:*         { behavior: url(#default#VML) }
   <v:h position="#0,bottomRight" xrange="6629,14971"/>
  </v:handles>
  <o:lock v:ext="edit" text="t" shapetype="t"/>
-</v:shapetype><v:shape id="_x0000_s1030" type="#_x0000_t136" alt="ÁÖ×Óð© "
+</v:shapetype><v:shape id="_x0000_s1052" type="#_x0000_t136" alt="æž—å­çš“ "
  style='width:355.5pt;height:72.75pt' fillcolor="#9400ed" strokecolor="#eaeaea"
  strokeweight=".35189mm">
  <v:fill color2="blue" angle="-90" colors="0 #a603ab;13763f #0819fb;22938f #1a8d48;34079f yellow;47841f #ee3f17;57672f #e81766;1 #a603ab"
   method="none" type="gradient"/>
  <v:shadow on="t" type="perspective" color="silver" opacity="52429f" origin="-.5,.5"
   matrix=",46340f,,.5,,-4768371582e-16"/>
- <v:textpath style='font-family:"¿¬Ìå";font-size:48pt;font-weight:bold;
-  v-text-kern:t' trim="t" fitpath="t" string="¡°Ð¡ºÄ×Ó¡±"/>
+ <v:textpath style='font-family:"æ¥·ä½“";font-size:48pt;font-weight:bold;
+  v-text-kern:t' trim="t" fitpath="t" string="â€œå°è€—å­â€"/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=511 height=100
-src="ÁÖ×Óð©%20¸öÈË½éÉÜ.files/image001.gif" alt="ÁÖ×Óð© " v:shapes="_x0000_s1030"><![endif]></p>
+src="æž—å­çš“%20ä¸ªäººä»‹ç».files/image001.gif" alt="æž—å­çš“ " v:shapes="_x0000_s1052"><![endif]></p>
 <p align="center" style="position: relative !important; ">
-<font color="#0000FF" size="6" face="»ªÎÄ¿¬Ìå"><b>Ñ§°Ô</b></font><font size="5" face="»ªÎÄ¿¬Ìå">µÄ&nbsp;&nbsp; 
-<font color="#FF0066">¸öÈË¼ò½é</font></font></p>
+<font color="#0000FF" size="6" face="åŽæ–‡æ¥·ä½“"><b>å­¦éœ¸</b></font><font size="5" face="åŽæ–‡æ¥·ä½“">çš„&nbsp;&nbsp; 
+<font color="#FF0066">ä¸ªäººç®€ä»‹</font></font></p>
 <p align="left" style="text-indent: 40px"><font size="5" color="#00FF00">
-<marquee scrollamount="10" scrolldelay="60" height="50" style="font-size: .5in; font-family: ¿¬Ìå; text-decoration: blink; font-weight: bold">ÎÒÊÇÒ»¸öÐ¡Ñ§Éú£¬Ò»¸öºÜÄåº¦µÄÐ¡Ñ§Éú£¡</marquee></font></p>
+<marquee scrollamount="10" scrolldelay="60" height="50" style="font-size: .5in; font-family: æ¥·ä½“; text-decoration: blink; font-weight: bold">æˆ‘æ˜¯ä¸€ä¸ªå°å­¦ç”Ÿï¼Œä¸€ä¸ªå¾ˆè…»å®³çš„å°å­¦ç”Ÿï¼</marquee></font></p>
 <p align="left" style="text-indent: 40px">
-<font size="5" face="»ªÎÄ¿¬Ìå">±¾ÈËÁÖ×Óð©ÉÃ³¤ÊýÑ§£¬±»¶àÈË×·Åõ£¬Ôì³É²»ÉÙÂé·³¡£ÎÒÓÃ½¨Õ¾Æ½Ì¨×ö¹ýÒ»¸öÓÐ·þÎñÆ÷µÄ</font></p>
+<font size="5" face="åŽæ–‡æ¥·ä½“">æœ¬äººæž—å­çš“æ“…é•¿æ•°å­¦ï¼Œè¢«å¤šäººè¿½æ§ï¼Œé€ æˆä¸å°‘éº»çƒ¦ã€‚æˆ‘ç”¨å»ºç«™å¹³å°åšè¿‡ä¸€ä¸ªæœ‰æœåŠ¡å™¨çš„</font></p>
 <p align="left" style="text-indent: 40px">
-<font size="5" face="»ªÎÄ¿¬Ìå">¸öÈËÍøÕ¾: </font>
-<a href="http://xiaohaozi.sxl.cn" target="_blank"><font size="5">xiaohaozi.sxl.cn</font></a></p>
+<font size="5" face="åŽæ–‡æ¥·ä½“">ä¸ªäººç½‘ç«™: </font>
+<a href="http://xiaohaozi.sxl.cn" target="_blank"><font size="5">
+xiaohaozi.sxl.cn</font></a></p>
 <p align="left" style="text-indent: 40px">
-<font size="5"><font face="»ªÎÄ¿¬Ìå">´úË¢Íø</font>£º<font face="»ªÎÄ¿¬Ìå">·ÀºéÁ´½Ó£¨ÓÃÕâ¸ö£©£º</font><a target="_blank" href="http://t.cn/Eo68MQy">t.cn/Eo68MQy</a><font face="»ªÎÄ¿¬Ìå">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-ÕæÊµÁ´½Ó£º</font><a target="_blank" href="http://xiaohaozi.lkdsw.com">xiaohaozi.lkdsw.com</a></font></p>
+<font size="5"><font face="åŽæ–‡æ¥·ä½“">ä»£åˆ·ç½‘</font>ï¼š<font face="åŽæ–‡æ¥·ä½“">é˜²æ´ªé“¾æŽ¥ï¼ˆç”¨è¿™ä¸ªï¼‰ï¼š</font><a target="_blank" href="http://t.cn/Eo68MQy">t.cn/Eo68MQy</a><font face="åŽæ–‡æ¥·ä½“">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+çœŸå®žé“¾æŽ¥ï¼š</font><a target="_blank" href="http://xiaohaozi.lkdsw.com">xiaohaozi.lkdsw.com</a></font></p>
 <div style="position: absolute; width: 320px; height: 35px; z-index: 1; left: 1006px; top: 1161px" id="layer1">
 	<p align="center"><span style="vertical-align: middle; visibility: hidden">
-	<font size="5" face="¿¬Ìå">¾ÍÊÇ¸øÕâÍæÒâ¶ùË¢Ã»µÄ£¡<img src="ÁÖ×Óð©%20ÎÄ¼þ/ÁÖ×Óð©%20¸öÈË½éÉÜ/ÓÃÍë½ÓÀá.jpg" width="48" height="49" align="middle">
+	<font size="5" face="æ¥·ä½“">å°±æ˜¯ç»™è¿™çŽ©æ„å„¿åˆ·æ²¡çš„ï¼<img src="æž—å­çš“%20æ–‡ä»¶/æž—å­çš“%20ä¸ªäººä»‹ç»/ç”¨ç¢—æŽ¥æ³ª.jpg" width="48" height="49" align="middle">
 	</font></span></div>
 <p align="left" style="text-indent: 40px">
-<font size="5"><font face="»ªÎÄ¿¬Ìå">¿¨ÃË£¨Ã»Ê²Ã´ÓÃ£©£º</font><a href="http://xhz.12ek.cn" target="_blank">xhz.12ek.cn</a></font></p>
+<font size="5"><font face="åŽæ–‡æ¥·ä½“">å¡ç›Ÿï¼ˆæ²¡ä»€ä¹ˆç”¨ï¼‰ï¼š</font><a href="http://xhz.12ek.cn" target="_blank">xhz.12ek.cn</a></font></p>
 <p align="left" style="text-indent: 40px">
-<font size="5" face="»ªÎÄ¿¬Ìå">¿ÉÒÔ<span lang="zh-cn">ÐÀÉÍÒ»ÏÂ</span></font></p>
+<font size="5" face="åŽæ–‡æ¥·ä½“">å¯ä»¥<span lang="zh-cn">æ¬£èµä¸€ä¸‹</span></font></p>
 <p align="left" style="text-indent: 40px">
-<font face="»ªÎÄÐÐ¿¬"><font size="5">×ö¸ö×ÔÎÒ½éÉÜ°É£¡ÎÒ½ÐÁÖ×Óð©£¬ÊÇ¸ö</font><img src="ÁÖ×Óð©%20ÎÄ¼þ/ÁÖ×Óð©%20¸öÈË½éÉÜ/µØÇò£¨ÕýÊ½°æ£©.gif" width="20" height="20" border="0"><font size="5">ÈË
-¡£ÎÒÊÇ<font color="#800000">ÄÐ</font>µÄ£¬½ñÄê<font color="#800000">Ê®Ò»ÖÜËê</font>£¬Ï²»¶</font><img src="ÁÖ×Óð©%20ÎÄ¼þ/ÁÖ×Óð©%20¸öÈË½éÉÜ/×°±Æ.jpg" width="100" height="81" align="middle"><font size="5">ºÍ<font color="#FFFF00">¶·Í¼</font>
-¡¢</font><font size="6" color="#FFFFFF">°ÂÊý</font><span lang="zh-cn"><font size="5">¡¢ºÍ</font><font color="#FF9933" size="6">ÐÅÏ¢</font></span><font size="5">£¬»¹ÓÐ¾ÍÊÇ¿ÎÌÃÉÏ×öµã²»»³ºÃÒâµÄ²¹³ä¡£ÎÒºÜ<font color="#FF0066">Æ¤</font>£¬°®Ì°Ð¡±ãÒË£¬ÒµÓàÊ±¼ä¸ãµã</font><font size="6" color="#0000FF">»¥ÁªÍø+</font><font size="5">£¬Ë¼¿¼Ò»ÏÂ¸ÐÐËÈ¤µÄ¿ÆÑ§ÎÊÌâ¡£×ÜÌåµÄÀ´Ëµ£¬ÎÒ¾ÍÊÇÒ»</font><font size="6" color="#00FFFF"><strong>¶º±È</strong></font><font size="5">£¡</font></font></p>
+<font face="åŽæ–‡è¡Œæ¥·"><font size="5">åšä¸ªè‡ªæˆ‘ä»‹ç»å§ï¼æˆ‘å«æž—å­çš“ï¼Œæ˜¯ä¸ª</font><img src="æž—å­çš“%20æ–‡ä»¶/æž—å­çš“%20ä¸ªäººä»‹ç»/åœ°çƒï¼ˆæ­£å¼ç‰ˆï¼‰.gif" width="20" height="20" border="0"><font size="5">äºº 
+ã€‚æˆ‘æ˜¯<font color="#800000">ç”·</font>çš„ï¼Œä»Šå¹´<font color="#800000">åä¸€å‘¨å²</font>ï¼Œå–œæ¬¢</font><img src="æž—å­çš“%20æ–‡ä»¶/æž—å­çš“%20ä¸ªäººä»‹ç»/è£…é€¼.jpg" width="100" height="81" align="middle"><font size="5">å’Œ<font color="#FFFF00">æ–—å›¾</font>
+ã€</font><font size="6" color="#FFFFFF">å¥¥æ•°</font><span lang="zh-cn"><font size="5">ã€å’Œ</font><font color="#FF9933" size="6">ä¿¡æ¯</font></span><font size="5">ï¼Œè¿˜æœ‰å°±æ˜¯è¯¾å ‚ä¸Šåšç‚¹ä¸æ€€å¥½æ„çš„è¡¥å……ã€‚æˆ‘å¾ˆ<font color="#FF0066">çš®</font>ï¼Œçˆ±è´ªå°ä¾¿å®œï¼Œä¸šä½™æ—¶é—´æžç‚¹</font><font size="6" color="#0000FF">äº’è”ç½‘+</font><font size="5">ï¼Œæ€è€ƒä¸€ä¸‹æ„Ÿå…´è¶£çš„ç§‘å­¦é—®é¢˜ã€‚æ€»ä½“çš„æ¥è¯´ï¼Œæˆ‘å°±æ˜¯ä¸€</font><font size="6" color="#00FFFF"><strong>é€—æ¯”</strong></font><font size="5">ï¼</font></font></p>
 <p align="left" style="text-indent: 40px">
-<font face="»ªÎÄÐÐ¿¬" size="5">ÁîÐí¶àÈË</font><img src="ÁÖ×Óð©%20ÎÄ¼þ/ÁÖ×Óð©%20¸öÈË½éÉÜ/ÏÛÄ½.jpg" width="103" height="101" align="middle" border="0">
-<font face="»ªÎÄÐÐ¿¬" size="5">µÄÊÇ£¬ÎÒ»¹»á»¹Ô­</font><font face="»ªÎÄÐÐ¿¬" size="6" color="#800000">Ä§·½</font><font face="»ªÎÄÐÐ¿¬" size="5">£¨ÓÒÍ¼Îª</font><font face="»ªÎÄÐÐ¿¬" size="6" color="#FF00FF">¾µÃæÄ§·½</font><font face="»ªÎÄÐÐ¿¬" size="5">£©<img border="0" src="ÁÖ×Óð©%20ÎÄ¼þ/ÁÖ×Óð©%20¸öÈË½éÉÜ/Ä§·½Í¼±ê.jpg" width="81" height="74" align="middle">¡£Ä¿Ç°»á2½×ºÍ3½×µÄ£¬</font><font face="»ªÎÄÁ¥Êé" size="5">ÒÔ</font><font face="»ªÎÄÐÐ¿¬" size="5">ºó»¹»á¼ÌÐøÑ§Ï°¡£</font></p>
+<font face="åŽæ–‡è¡Œæ¥·" size="5">ä»¤è®¸å¤šäºº</font><img src="æž—å­çš“%20æ–‡ä»¶/æž—å­çš“%20ä¸ªäººä»‹ç»/ç¾¡æ…•.jpg" width="103" height="101" align="middle" border="0">
+<font face="åŽæ–‡è¡Œæ¥·" size="5">çš„æ˜¯ï¼Œæˆ‘è¿˜ä¼šè¿˜åŽŸ</font><font face="åŽæ–‡è¡Œæ¥·" size="6" color="#800000">é­”æ–¹</font><font face="åŽæ–‡è¡Œæ¥·" size="5">ï¼ˆå³å›¾ä¸º</font><font face="åŽæ–‡è¡Œæ¥·" size="6" color="#FF00FF">é•œé¢é­”æ–¹</font><font face="åŽæ–‡è¡Œæ¥·" size="5">ï¼‰<img border="0" src="æž—å­çš“%20æ–‡ä»¶/æž—å­çš“%20ä¸ªäººä»‹ç»/é­”æ–¹å›¾æ ‡.jpg" width="81" height="74" align="middle">ã€‚ç›®å‰ä¼š2é˜¶å’Œ3é˜¶çš„ï¼Œ</font><font face="åŽæ–‡éš¶ä¹¦" size="5">ä»¥</font><font face="åŽæ–‡è¡Œæ¥·" size="5">åŽè¿˜ä¼šç»§ç»­å­¦ä¹ ã€‚</font></p>
 <p align="left" style="text-indent: 40px">
-<font face="»ªÎÄÐÐ¿¬" size="5">¸Õ¸Õ·¢ÏÖÁÖÐ¡¾ûµÄÖ÷Ò³Ã»ÓÐ³¬Á´½Ó»ØÈ¥£¬¸øËû¼ÓÁËµã´úÂë£º</font><font size="5" face="·½Õý´ÖºÚËÎ¼òÌå"><a href="´úÂë¼¯/´ÓÐÂ´°¿Ú´ò¿ª³¬Á´½Ó´úÂë.txt" target="_blank" style="text-decoration: none"> 
-target=&quot;_blank&quot;</a></font><font face="»ªÎÄÐÐ¿¬" size="5">£¨Ò²Ð´ÔÚ<a href="´úÂë¼¯" target="_blank" style="text-decoration: none"><font color="#FF00FF">´úÂë¼¯</font></a>ÀïÁË£©£¬ÔÚÐÂ´°¿Ú´ò¿ª
-£¬ÀÏÊ¦¿ÉÒÔ¿´¿´Ð§¹û¡£</font></p>
+<font face="åŽæ–‡è¡Œæ¥·" size="5">åˆšåˆšå‘çŽ°æž—å°é’§çš„ä¸»é¡µæ²¡æœ‰è¶…é“¾æŽ¥å›žåŽ»ï¼Œç»™ä»–åŠ äº†ç‚¹ä»£ç ï¼š</font><font size="5" face="æ–¹æ­£ç²—é»‘å®‹ç®€ä½“"><a href="ä»£ç é›†/ä»Žæ–°çª—å£æ‰“å¼€è¶…é“¾æŽ¥ä»£ç .txt" target="_blank" style="text-decoration: none"> 
+target=&quot;_blank&quot;</a></font><font face="åŽæ–‡è¡Œæ¥·" size="5">ï¼ˆä¹Ÿå†™åœ¨<a href="ä»£ç é›†" target="_blank" style="text-decoration: none"><font color="#FF00FF">ä»£ç é›†</font></a>é‡Œäº†ï¼‰ï¼Œåœ¨æ–°çª—å£æ‰“å¼€ 
+ï¼Œè€å¸ˆå¯ä»¥çœ‹çœ‹æ•ˆæžœã€‚</font></p>
 <p align="left" style="text-indent: 40px">
-<font face="»ªÎÄÐÐ¿¬" size="5">ÎÒ»¹¸øËùÓÐµÄÍøÒ³¼ÓÉÏÁËä¯ÀÀÆ÷ÄÚºËÖ¸¶¨Îª</font><font size="5" face="·½Õý´ÖºÚËÎ¼òÌå">IE</font><font face="»ªÎÄÐÐ¿¬" size="5">¼æÈÝÄ£Ê½µÄ´úÂë£º</font><font size="5" face="·½Õý´ÖºÚËÎ¼òÌå"><a href="´úÂë¼¯/ÄÚºËÖ¸¶¨Îª¼æÈÝ´úÂë.txt" target="_blank" style="text-decoration: none">&lt;meta 
-name=&quot;renderer&quot; content=&quot;ie-comp&quot;&gt;</a></font><font face="»ªÎÄÐÐ¿¬" size="5">ÀÏÊ¦¿ÉÒÔ¿´¿´Ð§¹û¡£</font></p>
+<font face="åŽæ–‡è¡Œæ¥·" size="5">æˆ‘è¿˜ç»™æ‰€æœ‰çš„ç½‘é¡µåŠ ä¸Šäº†æµè§ˆå™¨å†…æ ¸æŒ‡å®šä¸º</font><font size="5" face="æ–¹æ­£ç²—é»‘å®‹ç®€ä½“">IE</font><font face="åŽæ–‡è¡Œæ¥·" size="5">å…¼å®¹æ¨¡å¼çš„ä»£ç ï¼š</font><font size="5" face="æ–¹æ­£ç²—é»‘å®‹ç®€ä½“"><a href="ä»£ç é›†/å†…æ ¸æŒ‡å®šä¸ºå…¼å®¹ä»£ç .txt" target="_blank" style="text-decoration: none">&lt;meta 
+name=&quot;renderer&quot; content=&quot;ie-comp&quot;&gt;</a></font><font face="åŽæ–‡è¡Œæ¥·" size="5">è€å¸ˆå¯ä»¥çœ‹çœ‹æ•ˆæžœã€‚</font></p>
 <p align="left" style="text-indent: 40px">
-<font face="»ªÎÄÐÐ¿¬" size="5">ÍÅ¶ÓÀï¡°Éè¼Æ¡±Ä£Ê½²»ºÃ¸ã¶¨µÄ¶¼ÓÉÎÒÓÃ¡°´úÂë¡±Ä£Ê½»òÓÃ±Ê¼Ç±¾´ò¿ª±à¼­Ô´ÂëÀ´Íê³É¡£ÎÒ×î½üÔÚ×ÔÑ§´úÂë¡£</font></p>
+<font face="åŽæ–‡è¡Œæ¥·" size="5">å›¢é˜Ÿé‡Œâ€œè®¾è®¡â€æ¨¡å¼ä¸å¥½æžå®šçš„éƒ½ç”±æˆ‘ç”¨â€œä»£ç â€æ¨¡å¼æˆ–ç”¨ç¬”è®°æœ¬æ‰“å¼€ç¼–è¾‘æºç æ¥å®Œæˆã€‚æˆ‘æœ€è¿‘åœ¨è‡ªå­¦ä»£ç ã€‚</font></p>
 <p align="left" style="text-indent: 40px">
-¡¡</p>
+ã€€</p>
 <p align="left" style="text-indent: 40px">
-<b><font size="5" face="»ªÎÄ¿¬Ìå">ÁªÏµ·½Ê½£º</font></b></p>
+<b><font size="5" face="åŽæ–‡æ¥·ä½“">è”ç³»æ–¹å¼ï¼š</font></b></p>
 <p align="left" style="text-indent: 40px">
-<b><font face="»ªÎÄ¿¬Ìå" size="5">ÊÖ»ú£º13625035354</font></b></p>
+<b><font face="åŽæ–‡æ¥·ä½“" size="5">æ‰‹æœºï¼š13625035354</font></b></p>
 <p align="left" style="text-indent: 40px"><!--[if gte vml 1]><v:line
  id="_x0000_s1051" style='position:absolute;left:0;text-align:left;top:0;
- flip:x;z-index:3' from="700.5pt,276pt" to="1008.75pt,276pt" coordsize="21600,21600">
+ flip:x;z-index:3' from="700.5pt,276pt" to="1008.75pt,276pt">
  <v:stroke endarrow="block"/>
 </v:line><![endif]--><![if !vml]><span style='mso-ignore:vglayout;position:
 absolute;z-index:3;left:932px;top:362px;width:414px;height:12px'><img
-width=414 height=12 src="ÁÖ×Óð©%20¸öÈË½éÉÜ.files/image002.gif" v:shapes="_x0000_s1051"></span><![endif]><!--[if gte vml 1]><v:line
+width=414 height=12 src="æž—å­çš“%20ä¸ªäººä»‹ç».files/image002.gif" v:shapes="_x0000_s1051"></span><![endif]><!--[if gte vml 1]><v:line
  id="_x0000_s1050" style='position:absolute;left:0;text-align:left;top:0;
- flip:y;z-index:2' from="1008.75pt,276pt" to="1008.75pt,861.75pt" coordsize="21600,21600"/><![endif]--><![if !vml]><span
+ flip:y;z-index:2' from="1008.75pt,276pt" to="1008.75pt,861.75pt"/><![endif]--><![if !vml]><span
 style='mso-ignore:vglayout;position:absolute;z-index:2;left:1344px;top:367px;
 width:2px;height:783px'><img width=2 height=783
-src="ÁÖ×Óð©%20¸öÈË½éÉÜ.files/image003.gif" v:shapes="_x0000_s1050"></span><![endif]><!--[if gte vml 1]><v:line
+src="æž—å­çš“%20ä¸ªäººä»‹ç».files/image003.gif" v:shapes="_x0000_s1050"></span><![endif]><!--[if gte vml 1]><v:line
  id="_x0000_s1049" style='position:absolute;left:0;text-align:left;top:0;
- z-index:1' from="747.75pt,861.75pt" to="14in,861.75pt" coordsize="21600,21600"/><![endif]--><![if !vml]><span
+ z-index:1' from="747.75pt,861.75pt" to="14in,861.75pt"/><![endif]--><![if !vml]><span
 style='mso-ignore:vglayout;position:absolute;z-index:1;left:996px;top:1148px;
 width:349px;height:2px'><img width=349 height=2
-src="ÁÖ×Óð©%20¸öÈË½éÉÜ.files/image004.gif" v:shapes="_x0000_s1049"></span><![endif]><b><font face="»ªÎÄ¿¬Ìå" size="5">QQ£¨¾É£©£º2472542471£¨emm¡­¡­¿ÉÏ§ÒÑ¾­</font></b><img src="ÁÖ×Óð©%20ÎÄ¼þ/ÁÖ×Óð©%20¸öÈË½éÉÜ/Á¹ÁË.jpg" width="93" height="86" align="middle"><b><font face="»ªÎÄ¿¬Ìå" size="5">·âºÅÁË</font></b><img src="ÁÖ×Óð©%20ÎÄ¼þ/ÁÖ×Óð©%20¸öÈË½éÉÜ/¿ÞÁ³.gif" align="middle">
-<b><font face="»ªÎÄ¿¬Ìå" size="6" color="#FF00FF"><a href="ÁÖ×Óð© ÎÄ¼þ/ÁÖ×Óð© ¸öÈË½éÉÜ/ÓÀ¾Ã¶³½á.PNG" target="_blank">
-<font color="#00FFFF">µã´Ë²é¿´²Ò×´</font></a></font></b>&nbsp; <b>
-<font face="»ªÎÄ¿¬Ìå" size="5">£©</font></b></p>
-<p align="left" style="text-indent: 40px"><font face="»ªÎÄ¿¬Ìå" size="5"><b>QQ£¨ÐÂ£©£º<u><a href="tencent://message/?uin=691315602">691315602</a></u></b></font><b><font face="»ªÎÄ¿¬Ìå" size="5">£¨¸Õ¿ªµÄ<img src="ÁÖ×Óð©%20ÎÄ¼þ/ÁÖ×Óð©%20¸öÈË½éÉÜ/Ó¤¶ù£¨ÐÂµÄ£©.gif" width="90" height="89" align="middle">£©</font></b></p>
-<p align="left" style="text-indent: 40px">¡¡</p>
+src="æž—å­çš“%20ä¸ªäººä»‹ç».files/image004.gif" v:shapes="_x0000_s1049"></span><![endif]><b><font face="åŽæ–‡æ¥·ä½“" size="5">QQï¼ˆæ—§ï¼‰ï¼š2472542471ï¼ˆemmâ€¦â€¦å¯æƒœå·²ç»</font></b><img src="æž—å­çš“%20æ–‡ä»¶/æž—å­çš“%20ä¸ªäººä»‹ç»/å‡‰äº†.jpg" width="93" height="86" align="middle"><b><font face="åŽæ–‡æ¥·ä½“" size="5">å°å·äº†</font></b><img src="æž—å­çš“%20æ–‡ä»¶/æž—å­çš“%20ä¸ªäººä»‹ç»/å“­è„¸.gif" align="middle">
+<b><font face="åŽæ–‡æ¥·ä½“" size="6" color="#FF00FF"><a href="æž—å­çš“ æ–‡ä»¶/æž—å­çš“ ä¸ªäººä»‹ç»/æ°¸ä¹…å†»ç»“.PNG" target="_blank">
+<font color="#00FFFF">ç‚¹æ­¤æŸ¥çœ‹æƒ¨çŠ¶</font></a></font></b>&nbsp; <b>
+<font face="åŽæ–‡æ¥·ä½“" size="5">ï¼‰</font></b></p>
+<p align="left" style="text-indent: 40px"><font face="åŽæ–‡æ¥·ä½“" size="5"><b>QQï¼ˆæ–°ï¼‰ï¼š<u><a href="tencent://message/?uin=691315602">691315602</a></u></b></font><b><font face="åŽæ–‡æ¥·ä½“" size="5">ï¼ˆåˆšå¼€çš„<img src="æž—å­çš“%20æ–‡ä»¶/æž—å­çš“%20ä¸ªäººä»‹ç»/å©´å„¿ï¼ˆæ–°çš„ï¼‰.gif" width="90" height="89" align="middle">ï¼‰</font></b></p>
+<p align="left" style="text-indent: 40px">ã€€</p>
 <p align="left" style="text-indent: 40px"><b>
-<font face="»ªÎÄ¿¬Ìå" size="5" color="#FF0000">µã»÷ÉÏ·½QQºÅÓëÎÒÁªÏµ£¡</font></b></p>
+<font face="åŽæ–‡æ¥·ä½“" size="5" color="#FF0000">ç‚¹å‡»ä¸Šæ–¹QQå·ä¸Žæˆ‘è”ç³»ï¼</font></b></p>
 <p align="left" style="text-indent: 40px">
-¡¡</p>
+ã€€</p>
 <p align="left" style="text-indent: 40px">
-<b><font size="6" face="»ªÎÄ¿¬Ìå" color="#00FFFF">ÁíÍâ<span lang="zh-cn">£¬ÌôÕ½Ò»ÏÂÄã£ºÄãÄÜ×ö³öÏñ&nbsp; 
-</span></font><span lang="zh-cn"><font size="6" face="»ªÎÄ¿¬Ìå" color="#0000FF">¡°</font></span></b><u><font size="5" color="#0000FF"><a href="http://xiaohaozi.sxl.cn" target="_blank">xiaohaozi.sxl.cn</a></font></u><b><font face="»ªÎÄ¿¬Ìå"><span lang="zh-cn"><font size="6" color="#0000FF">¡±</font></span></font></b></p>
+<b><font size="6" face="åŽæ–‡æ¥·ä½“" color="#00FFFF">å¦å¤–<span lang="zh-cn">ï¼ŒæŒ‘æˆ˜ä¸€ä¸‹ä½ ï¼šä½ èƒ½åšå‡ºåƒ&nbsp; 
+</span></font><span lang="zh-cn"><font size="6" face="åŽæ–‡æ¥·ä½“" color="#0000FF">â€œ</font></span></b><u><font size="5" color="#0000FF"><a href="http://xiaohaozi.sxl.cn" target="_blank">xiaohaozi.sxl.cn</a></font></u><b><font face="åŽæ–‡æ¥·ä½“"><span lang="zh-cn"><font size="6" color="#0000FF">â€</font></span></font></b></p>
 <p align="left" style="text-indent: 40px">
-<span lang="zh-cn"><b><font face="»ªÎÄ¿¬Ìå" size="6" color="#00FFFF">ÕâÑùµÄ³¬Á´½ÓÃ´£¿</font></b></span></p>
+<span lang="zh-cn"><b><font face="åŽæ–‡æ¥·ä½“" size="6" color="#00FFFF">è¿™æ ·çš„è¶…é“¾æŽ¥ä¹ˆï¼Ÿ</font></b></span></p>
 <p align="left" style="text-indent: 40px">
 <!--[if gte vml 1]><v:oval
  id="_x0000_s1029" href="index.htm" style='position:absolute;left:756.75pt;
@@ -138,7 +139,7 @@ src="ÁÖ×Óð©%20¸öÈË½éÉÜ.files/image004.gif" v:shapes="_x0000_s1049"></span><![end
 <table cellspacing="0" cellpadding="0" width="100%" height="100%">
 	<tr>
 		<td align="center">
-		<p style="text-indent: 0"><font color="#FFFF00" size="5"><b>ÍÅ¶ÓÖ÷Ò³</b></font></td>
+		<p style="text-indent: 0"><font color="#FFFF00" size="5"><b>å›¢é˜Ÿä¸»é¡µ</b></font></td>
 	</tr>
 </table>
  </v:textbox>
@@ -147,11 +148,11 @@ absolute;z-index:1;left:1008px;top:1304px;width:180px;height:86px'><map
 name=MicrosoftOfficeMap0><area shape=Polygon
 coords="90, 3, 42, 3, 3, 21, 3, 43, 3, 65, 42, 83, 90, 83, 138, 83, 177, 65, 177, 43, 177, 21, 138, 3, 90, 3, 90, 3"
 href="index.htm" title=""></map><img border=0 width=180 height=86
-src="ÁÖ×Óð©%20¸öÈË½éÉÜ.files/image005.gif" usemap="#MicrosoftOfficeMap0"
-alt="ÍÖÔ²: ÍÅ¶ÓÖ÷Ò³&#13;&#10;" v:shapes="_x0000_s1029"></span><![endif]></p>
+src="æž—å­çš“%20ä¸ªäººä»‹ç».files/image005.gif" usemap="#MicrosoftOfficeMap0"
+alt="æ¤­åœ†: å›¢é˜Ÿä¸»é¡µ&#13;&#10;" v:shapes="_x0000_s1029"></span><![endif]></p>
 
 <p align="right" style="text-indent: 40px"><span lang="en">
-<font face="»ªÎÄ¿¬Ìå" size="5">Ð¡ºÄ×Ó£¨ÁÖ×Óð©£©&copy;°æÈ¨ËùÓÐ</font></span></p>
+<font face="åŽæ–‡æ¥·ä½“" size="5">å°è€—å­ï¼ˆæž—å­çš“ï¼‰Â©ç‰ˆæƒæ‰€æœ‰</font></span></p>
 
 </body>
 
