--- a/网站集锦.htm
+++ b/网站集锦.htm
@@ -3,12 +3,12 @@
 <head>
 <meta name="renderer" content="ie-comp">
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<meta name="keywords" content="ÓÐÈ¤ÍøÕ¾">
-<meta name="description" content="Îª´ó¼ÒÍÆ¼öµÄ¸÷ÖÖÓÐÈ¤ÍøÕ¾£¡">
-<link rel="File-List" href="ÍøÕ¾¼¯½õ.files/filelist.xml">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content="æœ‰è¶£ç½‘ç«™">
+<meta name="description" content="ä¸ºå¤§å®¶æŽ¨èçš„å„ç§æœ‰è¶£ç½‘ç«™ï¼">
+<link rel="File-List" href="ç½‘ç«™é›†é”¦.files/filelist.xml">
 
-<title>ÍøÕ¾¼¯½õ</title>
+<title>ç½‘ç«™é›†é”¦</title>
 <!--[if !mso]>
 <style>
 v\:*         { behavior: url(#default#VML) }
@@ -20,7 +20,7 @@ o\:*         { behavior: url(#default#VML) }
 </xml><![endif]-->
 </head>
 
-<body background="ÁÖ×Óð©%20ÎÄ¼þ/ÍøÕ¾¼¯½õ/ÍøÕ¾¼¯½õ%20±³¾°.jpg">
+<body background="æž—å­çš“%20æ–‡ä»¶/ç½‘ç«™é›†é”¦/ç½‘ç«™é›†é”¦%20èƒŒæ™¯.jpg">
 
 <p align="center"><!--[if gte vml 1]><v:shapetype id="_x0000_t156"
  coordsize="21600,21600" o:spt="156" adj="2809,10800" path="m@25@0c@26@3@27@1@28@0m@21@4c@22@5@23@6@24@4e">
@@ -77,36 +77,36 @@ o\:*         { behavior: url(#default#VML) }
  height:64.5pt' adj="1758" fillcolor="#99f" stroked="f">
  <v:fill color2="#099" focus="100%" type="gradient"/>
  <v:shadow on="t" color="silver" opacity="52429f" offset="3pt,3pt"/>
- <v:textpath style='font-family:"¿¬Ìå";font-size:48pt;font-weight:bold;
-  v-text-kern:t' trim="t" fitpath="t" xscale="f" string="ÍøÕ¾¼¯½õ"/>
+ <v:textpath style='font-family:"æ¥·ä½“";font-size:48pt;font-weight:bold;
+  v-text-kern:t' trim="t" fitpath="t" xscale="f" string="ç½‘ç«™é›†é”¦"/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=264 height=82
-src="ÍøÕ¾¼¯½õ.files/image001.gif" alt=ÍøÕ¾¼¯½õ v:shapes="_x0000_s1027"><![endif]></p>
-<p align="left"><blink><b><font face="¿¬Ìå" size="6" color="#FF00FF">
-<marquee>Îª´ó¼ÒÍÆ¼öµÄ¸÷ÖÖÓÐÈ¤ÍøÕ¾£¡</marquee></font></b></blink></p>
-<p align="left">¡¡</p>
-<p align="left"><font face="»ªÎÄ¿¬Ìå" size="5">
-<a href="http://meiriyiwen.com" target="_blank"><font color="#0000CC">Ã¿ÈÕÒ»ÎÄ</font></a>£ºhttp://meiriyiwen.com/<br>
+src="ç½‘ç«™é›†é”¦.files/image001.gif" alt=ç½‘ç«™é›†é”¦ v:shapes="_x0000_s1027"><![endif]></p>
+<p align="left"><blink><b><font face="æ¥·ä½“" size="6" color="#FF00FF">
+<marquee>ä¸ºå¤§å®¶æŽ¨èçš„å„ç§æœ‰è¶£ç½‘ç«™ï¼</marquee></font></b></blink></p>
+<p align="left">ã€€</p>
+<p align="left"><font face="åŽæ–‡æ¥·ä½“" size="5">
+<a href="http://meiriyiwen.com" target="_blank"><font color="#0000CC">æ¯æ—¥ä¸€æ–‡</font></a>ï¼šhttp://meiriyiwen.com/<br>
 <br>
-ËµÃ÷£º<font color="#FF0000">Ã¿ÌìÒ»Æª¾­µä¶ÌÆª£¬¸É¾»ÀûË÷¡£</font><br>
+è¯´æ˜Žï¼š<font color="#FF0000">æ¯å¤©ä¸€ç¯‡ç»å…¸çŸ­ç¯‡ï¼Œå¹²å‡€åˆ©ç´¢ã€‚</font><br>
 <br>
-<a href="http://www.qiushibaike.com/" target="_blank"><font color="#0000CC">ôÜÊÂ°Ù¿Æ</font></a>£ºhttp://www.qiushibaike.com/<br>
+<a href="http://www.qiushibaike.com/" target="_blank"><font color="#0000CC">ç³—äº‹ç™¾ç§‘</font></a>ï¼šhttp://www.qiushibaike.com/<br>
 <br>
-ËµÃ÷£º<font color="#FF0000">Õâ¸öÒ»¶¨Òª¿´£¬8Ð¡Ê±ÄÚ×îÈÈµÄôÜÊÂ¡£</font><br>
+è¯´æ˜Žï¼š<font color="#FF0000">è¿™ä¸ªä¸€å®šè¦çœ‹ï¼Œ8å°æ—¶å†…æœ€çƒ­çš„ç³—äº‹ã€‚</font><br>
 <br>
-<a href="http://www.xiami.com/" target="_blank"><font color="#0000CC">ÏºÃ×</font></a>£ºhttp://www.xiami.com/<br>
+<a href="http://www.xiami.com/" target="_blank"><font color="#0000CC">è™¾ç±³</font></a>ï¼šhttp://www.xiami.com/<br>
 <br>
-ËµÃ÷£º<font color="#FF0000">¼´Ê¹ºÜ¶àÆ«ÃÅµÄÒôÀÖÒ²ÄÜÔÚÕâÕÒµ½£¬¶øÇÒÄÜÏÂÔØ£¬¶øÇÒ¸ßÒôÖÊ£¡</font><br>
+è¯´æ˜Žï¼š<font color="#FF0000">å³ä½¿å¾ˆå¤šåé—¨çš„éŸ³ä¹ä¹Ÿèƒ½åœ¨è¿™æ‰¾åˆ°ï¼Œè€Œä¸”èƒ½ä¸‹è½½ï¼Œè€Œä¸”é«˜éŸ³è´¨ï¼</font><br>
 <br>
-<a href="http://jandan.net/" target="_blank"><font color="#0000CC">¼åµ°Íø</font></a>£ºhttp://jandan.net/<br>
+<a href="http://jandan.net/" target="_blank"><font color="#0000CC">ç…Žè›‹ç½‘</font></a>ï¼šhttp://jandan.net/<br>
 <br>
-ËµÃ÷£º<font color="#FF0000">µØÇòÉÏ²»»áÃ»ÓÐÐÂÏÊÊÂ¡£</font></font><!--[if gte vml 1]><v:oval
+è¯´æ˜Žï¼š<font color="#FF0000">åœ°çƒä¸Šä¸ä¼šæ²¡æœ‰æ–°é²œäº‹ã€‚</font></font><!--[if gte vml 1]><v:oval
  id="_x0000_s1026" href="index.htm" style='position:absolute;left:822.75pt;
  top:420pt;width:130.5pt;height:60pt;z-index:1' fillcolor="fuchsia">
  <v:textbox>
 <table cellspacing="0" cellpadding="0" width="100%" height="100%">
 	<tr>
 		<td align="center">
-		<p style="text-indent: 0"><font color="#FFFF00" size="5"><b>ÍÅ¶ÓÖ÷Ò³</b></font></td>
+		<p style="text-indent: 0"><font color="#FFFF00" size="5"><b>å›¢é˜Ÿä¸»é¡µ</b></font></td>
 	</tr>
 </table>
  </v:textbox>
@@ -115,12 +115,13 @@ absolute;z-index:1;left:1096px;top:559px;width:180px;height:86px'><map
 name=MicrosoftOfficeMap0><area shape=Polygon
 coords="90, 3, 42, 3, 3, 21, 3, 43, 3, 65, 42, 83, 90, 83, 138, 83, 177, 65, 177, 43, 177, 21, 138, 3, 90, 3, 90, 3"
 href="index.htm" title=""></map><img border=0 width=180 height=86
-src="ÍøÕ¾¼¯½õ.files/image002.gif" usemap="#MicrosoftOfficeMap0" alt="ÍÖÔ²: ÍÅ¶ÓÖ÷Ò³&#13;&#10;"
+src="ç½‘ç«™é›†é”¦.files/image002.gif" usemap="#MicrosoftOfficeMap0" alt="æ¤­åœ†: å›¢é˜Ÿä¸»é¡µ&#13;&#10;"
 v:shapes="_x0000_s1026"></span><![endif]></p>
-<p align="right">¡¡</p>
+<p align="right">ã€€</p>
 
 <p align="right" style="text-indent: 40px"><span lang="en">
-<font face="»ªÎÄ¿¬Ìå" size="5" color="#0000FF"><a href="ÁÖ×Óð©%20¸öÈË½éÉÜ.htm" target="_blank">Ð¡ºÄ×Ó<span style="text-decoration: none">£¨ÁÖ×Óð©£©</span></a>&copy;°æÈ¨ËùÓÐ</font></span></p>
+<font face="åŽæ–‡æ¥·ä½“" size="5" color="#0000FF"><a href="æž—å­çš“%20ä¸ªäººä»‹ç».htm" target="_blank">
+å°è€—å­<span style="text-decoration: none">ï¼ˆæž—å­çš“ï¼‰</span></a>Â©ç‰ˆæƒæ‰€æœ‰</font></span></p>
 
 </body>
 
