--- a/老师的黑话.htm
+++ b/老师的黑话.htm
@@ -2,10 +2,10 @@
 
 <head>
 <meta name="renderer" content="ie-comp">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<link rel="File-List" href="юой╕╣д╨з╩╟.files/filelist.xml">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="File-List" href="Х─│Е╦┬Г └И╩▒Х╞².files/filelist.xml">
 
-<title>юой╕╣д╨з╩╟</title>
+<title>Х─│Е╦┬Г └И╩▒Х╞²</title>
 <!--[if !mso]>
 <style>
 v\:*         { behavior: url(#default#VML) }
@@ -20,33 +20,33 @@ o\:*         { behavior: url(#default#VML) }
 <body>
 
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_000.jpg" width="480" height="2668"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_000.jpg" width="480" height="2668"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_001.jpg" width="480" height="2208"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_001.jpg" width="480" height="2208"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_002.jpg" width="480" height="1896"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_002.jpg" width="480" height="1896"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_003.jpg" width="480" height="1583"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_003.jpg" width="480" height="1583"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_004.jpg" width="480" height="1983"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_004.jpg" width="480" height="1983"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_005.jpg" width="480" height="2001"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_005.jpg" width="480" height="2001"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_006.jpg" width="480" height="2400"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_006.jpg" width="480" height="2400"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_007.jpg" width="480" height="2688"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_007.jpg" width="480" height="2688"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_008.jpg" width="480" height="2191"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_008.jpg" width="480" height="2191"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_009.jpg" width="640" height="1393"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_009.jpg" width="640" height="1393"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_010.jpg" width="480" height="2202"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_010.jpg" width="480" height="2202"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_011.jpg" width="480" height="2400"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_011.jpg" width="480" height="2400"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_012.jpg" width="480" height="2548"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_012.jpg" width="480" height="2548"></p>
 <p align="center">
-<img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_013.jpg" width="480" height="1837"></p>
+<img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_013.jpg" width="480" height="1837"></p>
 <p align="center">
 <!--[if gte vml 1]><v:oval id="_x0000_s1031"
  alt="" href="index.htm" style='position:absolute;left:762.75pt;top:23797.5pt;
@@ -55,7 +55,7 @@ o\:*         { behavior: url(#default#VML) }
 <table cellspacing="0" cellpadding="0" width="100%" height="100%">
 	<tr>
 		<td align="center">
-		<p style="text-indent: 0"><font color="#FFFF00" size="5"><b>ме╤сжВрЁ</b></font></td>
+		<p style="text-indent: 0"><font color="#FFFF00" size="5"><b>Е⌡╒И≤÷Д╦╩И║╣</b></font></td>
 	</tr>
 </table>
  </v:textbox>
@@ -64,12 +64,12 @@ absolute;z-index:0;left:1016px;top:31729px;width:180px;height:86px'><map
 name=MicrosoftOfficeMap0><area shape=Polygon
 coords="90, 3, 42, 3, 3, 21, 3, 43, 3, 65, 42, 83, 90, 83, 138, 83, 177, 65, 177, 43, 177, 21, 138, 3, 90, 3, 90, 3"
 href="index.htm" title=""></map><img border=0 width=180 height=86
-src="юой╕╣д╨з╩╟.files/image001.gif" usemap="#MicrosoftOfficeMap0" v:shapes="_x0000_s1031"></span><![endif]><img border="0" src="ажвсП╘%20нд╪Ч/юой╕╣д╨з╩╟%20м╪ф╛/20190424_182901_014.jpg" width="480" height="1645"></p>
+src="Х─│Е╦┬Г └И╩▒Х╞².files/image001.gif" usemap="#MicrosoftOfficeMap0" v:shapes="_x0000_s1031"></span><![endif]><img border="0" src="Ф·≈Е╜░Г ⌠%20Ф√┤Д╩╤/Х─│Е╦┬Г └И╩▒Х╞²%20Е⌡╬Г┴┤/20190424_182901_014.jpg" width="480" height="1645"></p>
 <p align="center">
-<font size="6">emm</font><font size="6" face="╩╙нд©╛лЕ">║╜║╜<font color="#FF0000">г╖мР</font>╠ПоКл╚╤Юакё╛нр©и<font color="#FF0000">ц╩сп╤ЯрБ</font>я╫║╜║╜</font></p>
+<font size="6">emm</font><font size="6" face="Е█▌Ф√┤Ф╔╥Д╫⌠">Б─╕Б─╕<font color="#FF0000">Е█┐Д╦┤</font>Е┬╚Ф┐ЁЕ╓╙Е╓ Д╨├О╪▄Ф┬▒Е▐╞<font color="#FF0000">Ф╡║Ф°┴Ф│╤Ф└▐</font>Е▒─Б─╕Б─╕</font></p>
 <p align="right">
-<font face="╩╙нд©╛лЕ"><font size="5">м╪ф╛ю╢втмЬбГ&nbsp; хГспгжх╗гКа╙о╣ <a href="ажвсП╘%20╦Жхк╫Ииэ.htm">
-п║╨двс</a></font></font></p>
+<font face="Е█▌Ф√┤Ф╔╥Д╫⌠"><font size="5">Е⌡╬Г┴┤Ф²╔Х┤╙Г╫▒Г╩°&nbsp; Е╕┌Ф°┴Д╬╣Ф²┐Х╞╥Х│■ГЁ╩ <a href="Ф·≈Е╜░Г ⌠%20Д╦╙Д╨╨Д╩▀Г╩█.htm">
+Е╟▐Х─≈Е╜░</a></font></font></p>
 
 </body>
 
