--- a/课程设置.htm
+++ b/课程设置.htm
@@ -2,9 +2,9 @@
 
 <head>
 <meta name="renderer" content="ie-comp">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<link rel="File-List" href="¿Î³ÌÉèÖÃ.files/filelist.xml">
-<title>¿Î³ÌÉèÖÃ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="File-List" href="è¯¾ç¨‹è®¾ç½®.files/filelist.xml">
+<title>è¯¾ç¨‹è®¾ç½®</title>
 <!--[if !mso]>
 <style>
 v\:*         { behavior: url(#default#VML) }
@@ -16,7 +16,7 @@ o\:*         { behavior: url(#default#VML) }
 </xml><![endif]-->
 </head>
 
-<body background="ÁÖÐ¡¾û%20ÎÄ¼þ/¿Î³ÌÉèÖÃ/¿Î³ÌÉèÖÃ%20±³¾°.jpg">
+<body background="æž—å°é’§%20æ–‡ä»¶/è¯¾ç¨‹è®¾ç½®/è¯¾ç¨‹è®¾ç½®%20èƒŒæ™¯.jpg">
 
 <p align="center"><!--[if gte vml 1]><v:shapetype id="_x0000_t136"
  coordsize="21600,21600" o:spt="136" adj="10800" path="m@7,l@8,m@5,21600l@6,21600e">
@@ -52,15 +52,15 @@ o\:*         { behavior: url(#default#VML) }
   color="white" on="t" metal="t" viewpoint="-34.72222mm" viewpointorigin="-.5"
   skewangle="-45" brightness="10000f" lightposition="0,-50000" lightlevel="44000f"
   lightposition2="0,50000" lightlevel2="24000f" type="perspective"/>
- <v:textpath style='font-family:"ËÎÌå";font-size:96pt;font-weight:bold;
-  font-style:italic;v-text-kern:t' trim="t" fitpath="t" string="¿Î³ÌÉèÖÃ"/>
+ <v:textpath style='font-family:"å®‹ä½“";font-size:96pt;font-weight:bold;
+  font-style:italic;v-text-kern:t' trim="t" fitpath="t" string="è¯¾ç¨‹è®¾ç½®"/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=521 height=133
-src="¿Î³ÌÉèÖÃ.files/image001.gif" alt=¿Î³ÌÉèÖÃ v:shapes="_x0000_s1025"><![endif]></p>
-<p align="center">¡¡</p>
-<p align="center">¡¡</p>
+src="è¯¾ç¨‹è®¾ç½®.files/image001.gif" alt=è¯¾ç¨‹è®¾ç½® v:shapes="_x0000_s1025"><![endif]></p>
+<p align="center">ã€€</p>
+<p align="center">ã€€</p>
 <p align="center"><font size="7">
-Ãñ¹ú³õ£¬³õµÈÐ¡Ñ§ÉèÐÞÉí¡¢¹úÎÄ¡¢ËãÊõ(ÖéËã)¡¢ÊÖ¹¤¡¢Í¼»­¡¢³ª¸èºÍÌå²Ù7¿Æ;¸ßµÈÐ¡Ñ§¼ÓÉèÀúÊ·¡¢µØÀíÁ½¿Æ¡£Ãñ¹ú11Äê³õÐ¡Éè¹úÓï¡¢ËãÊõ¡¢¹«Ãñ¡¢Í¼»­¡¢ÊÖ¹¤¡¢ÒôÀÖ¡¢ÌåÓý7¿Æ;¸ßÐ¡¼ÓÉèÀúÊ·¡¢µØÀí¡¢×ÔÈ»3¿Æ¡£Ãñ¹ú20Äêºó³õÐ¡Éè¹úÓï¡¢ËãÊõ¡¢¹«Ãñ¡¢³£Ê¶¡¢ÀÍ×÷¡¢ÌåÓý¡¢ÒôÀÖ¡¢ÃÀÊõ8¿Æ;¸ßÐ¡¼ÓÉè×ÔÈ»¡¢ÀúÊ·¡¢µØÀíµÈ¿Æ¡£Ãñ¹ú29Äêºó£¬¹úÃñÑ§Ð£Éè¹úÓï¡¢ËãÊõ¡¢ÃÀÊõ¡¢¹«Ãñ¡¢³£Ê¶¡¢ÀÍ×÷¡¢³ªÓÎµÈ¿Æ;ÖÐÐÄ¹úÃñÑ§Ð£¸ßÐ¡ÔöÉèÉç»á¡¢×ÔÈ»¡¢ÌåÓýµÈ¿Æ¡£¿¹ÈÕÕ½Õù¿ªÊ¼ºó£¬¸ßÐ¡&quot;Éç»á&quot;¿Æ¸ÄÎªÀúÊ·¡¢µØÀí£¬²¢Ôö¼Ó&quot;Ó×Í¯¾ü&quot;¿Æ¡£<br>
-1949~1951Äê³õÐ¡Éè¹úÓï(ÔÄ¶Á¡¢×÷ÎÄ¡¢Ëµ»°)¡¢ËãÊõ¡¢³£Ê¶¡¢ÌåÓý¡¢³ª¸è¡¢ÃÀÊõ¡¢ÀÍ×÷µÈ7¿Æ;¸ßÐ¡ÔöÉèÕþÖÎ¡¢µØÀí¡¢ÀúÊ·3¿Æ¡£1952ÄêÆðÐ¡Ñ§·ÖµÍ(Ò»¡¢¶þÄê¼¶)¡¢ÖÐ(Èý¡¢ËÄÄê¼¶)¡¢¸ß(Îå¡¢ÁùÄê¼¶)3¸öÄê¶Î£¬ÖÐµÍÄê¶ÎÉèÓïÎÄ¡¢ËãÊõ¡¢ÌåÓý¡¢ÒôÀÖ¡¢Í¼»­5¿Æ;¸ßÄê¼¶ÔöÉèÀúÊ·¡¢µØÀí¡¢×ÔÈ»3¿Æ¡£1953Äê¸ßÄê¼¶ÔöÉèÖéËã£¬É¾¼õ×ÔÈ»¿Æ¡£1955Äê¸÷Äê¼¶ÔöÉèÊÖ¹¤ÀÍ¶¯¿Î¡£1957ÄêÇï¸÷Äê¼¶ÔöÉè°à»á¿Î£¬ÎåÁùÄê¼¶ÔöÉèÀÍ¶¯¿Î£¬É¾È¥ÊÖ¹¤ÀÍ¶¯¿Î¡£1958Äê9ÔÂÆð¶þÄê¼¶ÒÔÉÏÁ·Ï°Ð´Ã«±Ê×Ö£¬É¾È¥¸ßÄê¼¶ÖéËã¿Î¡£1960ÄêÊÔÐÐ&quot;ÎåÄêÒ»¹áÖÆ&quot;Ð¡Ñ§ÉèÓïÎÄ¡¢ËãÊõ¡¢³£Ê¶¡¢³ª¸è¡¢ÌåÓý¡¢Í¼»­ºÍÖÜ»á7¿Æ¡£1969ÄêËõ¶ÌÑ§ÖÆ£¬È«ÏØÐ¡Ñ§ÊµÐÐ5ÄêÖÆÊ±£¬¿ªÉèÕþÖÎ¡¢ÓïÎÄ¡¢ÊýÑ§¡¢¾üÌå¡¢Å©Òµ³£Ê¶ºÍ¸ïÃüÎÄÒÕ6¿Æ¡£1972ÄêÇï£¬µÍÄê¼¶ÉèÓïÎÄ¡¢ÊýÑ§¡¢ÕþÖÎ¡¢³ª¸è¡¢ÃÀÊõºÍÌåÓý¿Æ£¬¸ßÄê¼¶ÔöÉèÅ©Òµ³£Ê¶ºÍÀÍ¶¯µÈ¿Æ¡£1978ÄêÐ¡Ñ§ÉèÓïÎÄ¡¢ÊýÑ§¡¢ÀúÊ·¡¢µØÀí¡¢×ÔÈ»¡¢ÒôÀÖ¡¢ÃÀÊõºÍÌåÓý8¿Æ¡£1981ÄêÇï¸÷Äê¼¶ÕþÖÎ¿Î¸ÄÎªË¼ÏëÆ·µÂ¿Î£¬ÔöÉè°à»á¡¢¶Ó»áºÍ¿ÎÍâ»î¶¯µÈ¿Î³Ì¡£</font></p>
+æ°‘å›½åˆï¼Œåˆç­‰å°å­¦è®¾ä¿®èº«ã€å›½æ–‡ã€ç®—æœ¯(ç ç®—)ã€æ‰‹å·¥ã€å›¾ç”»ã€å”±æ­Œå’Œä½“æ“7ç§‘;é«˜ç­‰å°å­¦åŠ è®¾åŽ†å²ã€åœ°ç†ä¸¤ç§‘ã€‚æ°‘å›½11å¹´åˆå°è®¾å›½è¯­ã€ç®—æœ¯ã€å…¬æ°‘ã€å›¾ç”»ã€æ‰‹å·¥ã€éŸ³ä¹ã€ä½“è‚²7ç§‘;é«˜å°åŠ è®¾åŽ†å²ã€åœ°ç†ã€è‡ªç„¶3ç§‘ã€‚æ°‘å›½20å¹´åŽåˆå°è®¾å›½è¯­ã€ç®—æœ¯ã€å…¬æ°‘ã€å¸¸è¯†ã€åŠ³ä½œã€ä½“è‚²ã€éŸ³ä¹ã€ç¾Žæœ¯8ç§‘;é«˜å°åŠ è®¾è‡ªç„¶ã€åŽ†å²ã€åœ°ç†ç­‰ç§‘ã€‚æ°‘å›½29å¹´åŽï¼Œå›½æ°‘å­¦æ ¡è®¾å›½è¯­ã€ç®—æœ¯ã€ç¾Žæœ¯ã€å…¬æ°‘ã€å¸¸è¯†ã€åŠ³ä½œã€å”±æ¸¸ç­‰ç§‘;ä¸­å¿ƒå›½æ°‘å­¦æ ¡é«˜å°å¢žè®¾ç¤¾ä¼šã€è‡ªç„¶ã€ä½“è‚²ç­‰ç§‘ã€‚æŠ—æ—¥æˆ˜äº‰å¼€å§‹åŽï¼Œé«˜å°&quot;ç¤¾ä¼š&quot;ç§‘æ”¹ä¸ºåŽ†å²ã€åœ°ç†ï¼Œå¹¶å¢žåŠ &quot;å¹¼ç«¥å†›&quot;ç§‘ã€‚<br>
+1949~1951å¹´åˆå°è®¾å›½è¯­(é˜…è¯»ã€ä½œæ–‡ã€è¯´è¯)ã€ç®—æœ¯ã€å¸¸è¯†ã€ä½“è‚²ã€å”±æ­Œã€ç¾Žæœ¯ã€åŠ³ä½œç­‰7ç§‘;é«˜å°å¢žè®¾æ”¿æ²»ã€åœ°ç†ã€åŽ†å²3ç§‘ã€‚1952å¹´èµ·å°å­¦åˆ†ä½Ž(ä¸€ã€äºŒå¹´çº§)ã€ä¸­(ä¸‰ã€å››å¹´çº§)ã€é«˜(äº”ã€å…­å¹´çº§)3ä¸ªå¹´æ®µï¼Œä¸­ä½Žå¹´æ®µè®¾è¯­æ–‡ã€ç®—æœ¯ã€ä½“è‚²ã€éŸ³ä¹ã€å›¾ç”»5ç§‘;é«˜å¹´çº§å¢žè®¾åŽ†å²ã€åœ°ç†ã€è‡ªç„¶3ç§‘ã€‚1953å¹´é«˜å¹´çº§å¢žè®¾ç ç®—ï¼Œåˆ å‡è‡ªç„¶ç§‘ã€‚1955å¹´å„å¹´çº§å¢žè®¾æ‰‹å·¥åŠ³åŠ¨è¯¾ã€‚1957å¹´ç§‹å„å¹´çº§å¢žè®¾ç­ä¼šè¯¾ï¼Œäº”å…­å¹´çº§å¢žè®¾åŠ³åŠ¨è¯¾ï¼Œåˆ åŽ»æ‰‹å·¥åŠ³åŠ¨è¯¾ã€‚1958å¹´9æœˆèµ·äºŒå¹´çº§ä»¥ä¸Šç»ƒä¹ å†™æ¯›ç¬”å­—ï¼Œåˆ åŽ»é«˜å¹´çº§ç ç®—è¯¾ã€‚1960å¹´è¯•è¡Œ&quot;äº”å¹´ä¸€è´¯åˆ¶&quot;å°å­¦è®¾è¯­æ–‡ã€ç®—æœ¯ã€å¸¸è¯†ã€å”±æ­Œã€ä½“è‚²ã€å›¾ç”»å’Œå‘¨ä¼š7ç§‘ã€‚1969å¹´ç¼©çŸ­å­¦åˆ¶ï¼Œå…¨åŽ¿å°å­¦å®žè¡Œ5å¹´åˆ¶æ—¶ï¼Œå¼€è®¾æ”¿æ²»ã€è¯­æ–‡ã€æ•°å­¦ã€å†›ä½“ã€å†œä¸šå¸¸è¯†å’Œé©å‘½æ–‡è‰º6ç§‘ã€‚1972å¹´ç§‹ï¼Œä½Žå¹´çº§è®¾è¯­æ–‡ã€æ•°å­¦ã€æ”¿æ²»ã€å”±æ­Œã€ç¾Žæœ¯å’Œä½“è‚²ç§‘ï¼Œé«˜å¹´çº§å¢žè®¾å†œä¸šå¸¸è¯†å’ŒåŠ³åŠ¨ç­‰ç§‘ã€‚1978å¹´å°å­¦è®¾è¯­æ–‡ã€æ•°å­¦ã€åŽ†å²ã€åœ°ç†ã€è‡ªç„¶ã€éŸ³ä¹ã€ç¾Žæœ¯å’Œä½“è‚²8ç§‘ã€‚1981å¹´ç§‹å„å¹´çº§æ”¿æ²»è¯¾æ”¹ä¸ºæ€æƒ³å“å¾·è¯¾ï¼Œå¢žè®¾ç­ä¼šã€é˜Ÿä¼šå’Œè¯¾å¤–æ´»åŠ¨ç­‰è¯¾ç¨‹ã€‚</font></p>
 
 </body>
 
